v3/elements.md
---
layout: sidebar
sidebar: s1
title: "Elements"
version: "v3"
---
<div>
   <h3 class="widget-title">MEI Elements</h3>
   <div class="textwidget">
      <div class="sortedInitials well a">
         <h3>a</h3>
         <a class="link_odd_elementSpec chip a" href="/{{ site.baseurl }}/{{ page.version }}/elements/abbr.html">abbr</a>
         <a class="link_odd_elementSpec chip a" href="/{{ site.baseurl }}/{{ page.version }}/elements/accessRestrict.html">accessRestrict</a>
         <a class="link_odd_elementSpec chip a" href="/{{ site.baseurl }}/{{ page.version }}/elements/accid.html">accid</a>
         <a class="link_odd_elementSpec chip a" href="/{{ site.baseurl }}/{{ page.version }}/elements/actor.html">actor</a>
         <a class="link_odd_elementSpec chip a" href="/{{ site.baseurl }}/{{ page.version }}/elements/add.html">add</a>
         <a class="link_odd_elementSpec chip a" href="/{{ site.baseurl }}/{{ page.version }}/elements/addName.html">addName</a>
         <a class="link_odd_elementSpec chip a" href="/{{ site.baseurl }}/{{ page.version }}/elements/addrLine.html">addrLine</a>
         <a class="link_odd_elementSpec chip a" href="/{{ site.baseurl }}/{{ page.version }}/elements/address.html">address</a>
         <a class="link_odd_elementSpec chip a" href="/{{ site.baseurl }}/{{ page.version }}/elements/altId.html">altId</a>
         <a class="link_odd_elementSpec chip a" href="/{{ site.baseurl }}/{{ page.version }}/elements/anchoredText.html">anchoredText</a>
         <a class="link_odd_elementSpec chip a" href="/{{ site.baseurl }}/{{ page.version }}/elements/annot.html">annot</a>
         <a class="link_odd_elementSpec chip a" href="/{{ site.baseurl }}/{{ page.version }}/elements/app.html">app</a>
         <a class="link_odd_elementSpec chip a" href="/{{ site.baseurl }}/{{ page.version }}/elements/appInfo.html">appInfo</a>
         <a class="link_odd_elementSpec chip a" href="/{{ site.baseurl }}/{{ page.version }}/elements/application.html">application</a>
         <a class="link_odd_elementSpec chip a" href="/{{ site.baseurl }}/{{ page.version }}/elements/arpeg.html">arpeg</a>
         <a class="link_odd_elementSpec chip a" href="/{{ site.baseurl }}/{{ page.version }}/elements/arranger.html">arranger</a>
         <a class="link_odd_elementSpec chip a" href="/{{ site.baseurl }}/{{ page.version }}/elements/artic.html">artic</a>
         <a class="link_odd_elementSpec chip a" href="/{{ site.baseurl }}/{{ page.version }}/elements/audience.html">audience</a>
         <a class="link_odd_elementSpec chip a" href="/{{ site.baseurl }}/{{ page.version }}/elements/author.html">author</a>
         <a class="link_odd_elementSpec chip a" href="/{{ site.baseurl }}/{{ page.version }}/elements/avFile.html">avFile</a>
         <a class="link_odd_elementSpec chip a" href="/{{ site.baseurl }}/{{ page.version }}/elements/availability.html">availability</a>
      </div>
      <div class="sortedInitials well b">
         <h3>b</h3>
         <a class="link_odd_elementSpec chip b" href="/{{ site.baseurl }}/{{ page.version }}/elements/bTrem.html">bTrem</a>
         <a class="link_odd_elementSpec chip b" href="/{{ site.baseurl }}/{{ page.version }}/elements/back.html">back</a>
         <a class="link_odd_elementSpec chip b" href="/{{ site.baseurl }}/{{ page.version }}/elements/barLine.html">barLine</a>
         <a class="link_odd_elementSpec chip b" href="/{{ site.baseurl }}/{{ page.version }}/elements/barre.html">barre</a>
         <a class="link_odd_elementSpec chip b" href="/{{ site.baseurl }}/{{ page.version }}/elements/beam.html">beam</a>
         <a class="link_odd_elementSpec chip b" href="/{{ site.baseurl }}/{{ page.version }}/elements/beamSpan.html">beamSpan</a>
         <a class="link_odd_elementSpec chip b" href="/{{ site.baseurl }}/{{ page.version }}/elements/beatRpt.html">beatRpt</a>
         <a class="link_odd_elementSpec chip b" href="/{{ site.baseurl }}/{{ page.version }}/elements/bend.html">bend</a>
         <a class="link_odd_elementSpec chip b" href="/{{ site.baseurl }}/{{ page.version }}/elements/bibl.html">bibl</a>
         <a class="link_odd_elementSpec chip b" href="/{{ site.baseurl }}/{{ page.version }}/elements/biblList.html">biblList</a>
         <a class="link_odd_elementSpec chip b" href="/{{ site.baseurl }}/{{ page.version }}/elements/biblScope.html">biblScope</a>
         <a class="link_odd_elementSpec chip b" href="/{{ site.baseurl }}/{{ page.version }}/elements/bloc.html">bloc</a>
         <a class="link_odd_elementSpec chip b" href="/{{ site.baseurl }}/{{ page.version }}/elements/body.html">body</a>
         <a class="link_odd_elementSpec chip b" href="/{{ site.baseurl }}/{{ page.version }}/elements/breath.html">breath</a>
         <a class="link_odd_elementSpec chip b" href="/{{ site.baseurl }}/{{ page.version }}/elements/byline.html">byline</a>
      </div>
      <div class="sortedInitials well c">
         <h3>c</h3>
         <a class="link_odd_elementSpec chip c" href="/{{ site.baseurl }}/{{ page.version }}/elements/caption.html">caption</a>
         <a class="link_odd_elementSpec chip c" href="/{{ site.baseurl }}/{{ page.version }}/elements/captureMode.html">captureMode</a>
         <a class="link_odd_elementSpec chip c" href="/{{ site.baseurl }}/{{ page.version }}/elements/carrierForm.html">carrierForm</a>
         <a class="link_odd_elementSpec chip c" href="/{{ site.baseurl }}/{{ page.version }}/elements/castGrp.html">castGrp</a>
         <a class="link_odd_elementSpec chip c" href="/{{ site.baseurl }}/{{ page.version }}/elements/castItem.html">castItem</a>
         <a class="link_odd_elementSpec chip c" href="/{{ site.baseurl }}/{{ page.version }}/elements/castList.html">castList</a>
         <a class="link_odd_elementSpec chip c" href="/{{ site.baseurl }}/{{ page.version }}/elements/cc.html">cc</a>
         <a class="link_odd_elementSpec chip c" href="/{{ site.baseurl }}/{{ page.version }}/elements/chan.html">chan</a>
         <a class="link_odd_elementSpec chip c" href="/{{ site.baseurl }}/{{ page.version }}/elements/chanPr.html">chanPr</a>
         <a class="link_odd_elementSpec chip c" href="/{{ site.baseurl }}/{{ page.version }}/elements/change.html">change</a>
         <a class="link_odd_elementSpec chip c" href="/{{ site.baseurl }}/{{ page.version }}/elements/changeDesc.html">changeDesc</a>
         <a class="link_odd_elementSpec chip c" href="/{{ site.baseurl }}/{{ page.version }}/elements/choice.html">choice</a>
         <a class="link_odd_elementSpec chip c" href="/{{ site.baseurl }}/{{ page.version }}/elements/chord.html">chord</a>
         <a class="link_odd_elementSpec chip c" href="/{{ site.baseurl }}/{{ page.version }}/elements/chordDef.html">chordDef</a>
         <a class="link_odd_elementSpec chip c" href="/{{ site.baseurl }}/{{ page.version }}/elements/chordMember.html">chordMember</a>
         <a class="link_odd_elementSpec chip c" href="/{{ site.baseurl }}/{{ page.version }}/elements/chordTable.html">chordTable</a>
         <a class="link_odd_elementSpec chip c" href="/{{ site.baseurl }}/{{ page.version }}/elements/classCode.html">classCode</a>
         <a class="link_odd_elementSpec chip c" href="/{{ site.baseurl }}/{{ page.version }}/elements/classification.html">classification</a>
         <a class="link_odd_elementSpec chip c" href="/{{ site.baseurl }}/{{ page.version }}/elements/clef.html">clef</a>
         <a class="link_odd_elementSpec chip c" href="/{{ site.baseurl }}/{{ page.version }}/elements/clefGrp.html">clefGrp</a>
         <a class="link_odd_elementSpec chip c" href="/{{ site.baseurl }}/{{ page.version }}/elements/clip.html">clip</a>
         <a class="link_odd_elementSpec chip c" href="/{{ site.baseurl }}/{{ page.version }}/elements/componentGrp.html">componentGrp</a>
         <a class="link_odd_elementSpec chip c" href="/{{ site.baseurl }}/{{ page.version }}/elements/composer.html">composer</a>
         <a class="link_odd_elementSpec chip c" href="/{{ site.baseurl }}/{{ page.version }}/elements/condition.html">condition</a>
         <a class="link_odd_elementSpec chip c" href="/{{ site.baseurl }}/{{ page.version }}/elements/contentItem.html">contentItem</a>
         <a class="link_odd_elementSpec chip c" href="/{{ site.baseurl }}/{{ page.version }}/elements/contents.html">contents</a>
         <a class="link_odd_elementSpec chip c" href="/{{ site.baseurl }}/{{ page.version }}/elements/context.html">context</a>
         <a class="link_odd_elementSpec chip c" href="/{{ site.baseurl }}/{{ page.version }}/elements/corpName.html">corpName</a>
         <a class="link_odd_elementSpec chip c" href="/{{ site.baseurl }}/{{ page.version }}/elements/corr.html">corr</a>
         <a class="link_odd_elementSpec chip c" href="/{{ site.baseurl }}/{{ page.version }}/elements/correction.html">correction</a>
         <a class="link_odd_elementSpec chip c" href="/{{ site.baseurl }}/{{ page.version }}/elements/country.html">country</a>
         <a class="link_odd_elementSpec chip c" href="/{{ site.baseurl }}/{{ page.version }}/elements/cpMark.html">cpMark</a>
         <a class="link_odd_elementSpec chip c" href="/{{ site.baseurl }}/{{ page.version }}/elements/creation.html">creation</a>
         <a class="link_odd_elementSpec chip c" href="/{{ site.baseurl }}/{{ page.version }}/elements/cue.html">cue</a>
         <a class="link_odd_elementSpec chip c" href="/{{ site.baseurl }}/{{ page.version }}/elements/curve.html">curve</a>
         <a class="link_odd_elementSpec chip c" href="/{{ site.baseurl }}/{{ page.version }}/elements/custos.html">custos</a>
      </div>
      <div class="sortedInitials well d">
         <h3>d</h3>
         <a class="link_odd_elementSpec chip d" href="/{{ site.baseurl }}/{{ page.version }}/elements/damage.html">damage</a>
         <a class="link_odd_elementSpec chip d" href="/{{ site.baseurl }}/{{ page.version }}/elements/date.html">date</a>
         <a class="link_odd_elementSpec chip d" href="/{{ site.baseurl }}/{{ page.version }}/elements/del.html">del</a>
         <a class="link_odd_elementSpec chip d" href="/{{ site.baseurl }}/{{ page.version }}/elements/depth.html">depth</a>
         <a class="link_odd_elementSpec chip d" href="/{{ site.baseurl }}/{{ page.version }}/elements/desc.html">desc</a>
         <a class="link_odd_elementSpec chip d" href="/{{ site.baseurl }}/{{ page.version }}/elements/dimensions.html">dimensions</a>
         <a class="link_odd_elementSpec chip d" href="/{{ site.baseurl }}/{{ page.version }}/elements/dir.html">dir</a>
         <a class="link_odd_elementSpec chip d" href="/{{ site.baseurl }}/{{ page.version }}/elements/distributor.html">distributor</a>
         <a class="link_odd_elementSpec chip d" href="/{{ site.baseurl }}/{{ page.version }}/elements/district.html">district</a>
         <a class="link_odd_elementSpec chip d" href="/{{ site.baseurl }}/{{ page.version }}/elements/div.html">div</a>
         <a class="link_odd_elementSpec chip d" href="/{{ site.baseurl }}/{{ page.version }}/elements/dot.html">dot</a>
         <a class="link_odd_elementSpec chip d" href="/{{ site.baseurl }}/{{ page.version }}/elements/dynam.html">dynam</a>
      </div>
      <div class="sortedInitials well e">
         <h3>e</h3>
         <a class="link_odd_elementSpec chip e" href="/{{ site.baseurl }}/{{ page.version }}/elements/edition.html">edition</a>
         <a class="link_odd_elementSpec chip e" href="/{{ site.baseurl }}/{{ page.version }}/elements/editionStmt.html">editionStmt</a>
         <a class="link_odd_elementSpec chip e" href="/{{ site.baseurl }}/{{ page.version }}/elements/editor.html">editor</a>
         <a class="link_odd_elementSpec chip e" href="/{{ site.baseurl }}/{{ page.version }}/elements/editorialDecl.html">editorialDecl</a>
         <a class="link_odd_elementSpec chip e" href="/{{ site.baseurl }}/{{ page.version }}/elements/encodingDesc.html">encodingDesc</a>
         <a class="link_odd_elementSpec chip e" href="/{{ site.baseurl }}/{{ page.version }}/elements/ending.html">ending</a>
         <a class="link_odd_elementSpec chip e" href="/{{ site.baseurl }}/{{ page.version }}/elements/event.html">event</a>
         <a class="link_odd_elementSpec chip e" href="/{{ site.baseurl }}/{{ page.version }}/elements/eventList.html">eventList</a>
         <a class="link_odd_elementSpec chip e" href="/{{ site.baseurl }}/{{ page.version }}/elements/exhibHist.html">exhibHist</a>
         <a class="link_odd_elementSpec chip e" href="/{{ site.baseurl }}/{{ page.version }}/elements/expan.html">expan</a>
         <a class="link_odd_elementSpec chip e" href="/{{ site.baseurl }}/{{ page.version }}/elements/expansion.html">expansion</a>
         <a class="link_odd_elementSpec chip e" href="/{{ site.baseurl }}/{{ page.version }}/elements/expression.html">expression</a>
         <a class="link_odd_elementSpec chip e" href="/{{ site.baseurl }}/{{ page.version }}/elements/expressionList.html">expressionList</a>
         <a class="link_odd_elementSpec chip e" href="/{{ site.baseurl }}/{{ page.version }}/elements/extMeta.html">extMeta</a>
         <a class="link_odd_elementSpec chip e" href="/{{ site.baseurl }}/{{ page.version }}/elements/extent.html">extent</a>
      </div>
      <div class="sortedInitials well f">
         <h3>f</h3>
         <a class="link_odd_elementSpec chip f" href="/{{ site.baseurl }}/{{ page.version }}/elements/f.html">f</a>
         <a class="link_odd_elementSpec chip f" href="/{{ site.baseurl }}/{{ page.version }}/elements/fTrem.html">fTrem</a>
         <a class="link_odd_elementSpec chip f" href="/{{ site.baseurl }}/{{ page.version }}/elements/facsimile.html">facsimile</a>
         <a class="link_odd_elementSpec chip f" href="/{{ site.baseurl }}/{{ page.version }}/elements/famName.html">famName</a>
         <a class="link_odd_elementSpec chip f" href="/{{ site.baseurl }}/{{ page.version }}/elements/fb.html">fb</a>
         <a class="link_odd_elementSpec chip f" href="/{{ site.baseurl }}/{{ page.version }}/elements/fermata.html">fermata</a>
         <a class="link_odd_elementSpec chip f" href="/{{ site.baseurl }}/{{ page.version }}/elements/fig.html">fig</a>
         <a class="link_odd_elementSpec chip f" href="/{{ site.baseurl }}/{{ page.version }}/elements/figDesc.html">figDesc</a>
         <a class="link_odd_elementSpec chip f" href="/{{ site.baseurl }}/{{ page.version }}/elements/fileChar.html">fileChar</a>
         <a class="link_odd_elementSpec chip f" href="/{{ site.baseurl }}/{{ page.version }}/elements/fileDesc.html">fileDesc</a>
         <a class="link_odd_elementSpec chip f" href="/{{ site.baseurl }}/{{ page.version }}/elements/fing.html">fing</a>
         <a class="link_odd_elementSpec chip f" href="/{{ site.baseurl }}/{{ page.version }}/elements/fingGrp.html">fingGrp</a>
         <a class="link_odd_elementSpec chip f" href="/{{ site.baseurl }}/{{ page.version }}/elements/fingerprint.html">fingerprint</a>
         <a class="link_odd_elementSpec chip f" href="/{{ site.baseurl }}/{{ page.version }}/elements/foreName.html">foreName</a>
         <a class="link_odd_elementSpec chip f" href="/{{ site.baseurl }}/{{ page.version }}/elements/front.html">front</a>
         <a class="link_odd_elementSpec chip f" href="/{{ site.baseurl }}/{{ page.version }}/elements/funder.html">funder</a>
      </div>
      <div class="sortedInitials well g">
         <h3>g</h3>
         <a class="link_odd_elementSpec chip g" href="/{{ site.baseurl }}/{{ page.version }}/elements/gap.html">gap</a>
         <a class="link_odd_elementSpec chip g" href="/{{ site.baseurl }}/{{ page.version }}/elements/genName.html">genName</a>
         <a class="link_odd_elementSpec chip g" href="/{{ site.baseurl }}/{{ page.version }}/elements/genre.html">genre</a>
         <a class="link_odd_elementSpec chip g" href="/{{ site.baseurl }}/{{ page.version }}/elements/geogFeat.html">geogFeat</a>
         <a class="link_odd_elementSpec chip g" href="/{{ site.baseurl }}/{{ page.version }}/elements/geogName.html">geogName</a>
         <a class="link_odd_elementSpec chip g" href="/{{ site.baseurl }}/{{ page.version }}/elements/gliss.html">gliss</a>
         <a class="link_odd_elementSpec chip g" href="/{{ site.baseurl }}/{{ page.version }}/elements/graphic.html">graphic</a>
         <a class="link_odd_elementSpec chip g" href="/{{ site.baseurl }}/{{ page.version }}/elements/group.html">group</a>
         <a class="link_odd_elementSpec chip g" href="/{{ site.baseurl }}/{{ page.version }}/elements/grpSym.html">grpSym</a>
      </div>
      <div class="sortedInitials well h">
         <h3>h</h3>
         <a class="link_odd_elementSpec chip h" href="/{{ site.baseurl }}/{{ page.version }}/elements/hairpin.html">hairpin</a>
         <a class="link_odd_elementSpec chip h" href="/{{ site.baseurl }}/{{ page.version }}/elements/halfmRpt.html">halfmRpt</a>
         <a class="link_odd_elementSpec chip h" href="/{{ site.baseurl }}/{{ page.version }}/elements/hand.html">hand</a>
         <a class="link_odd_elementSpec chip h" href="/{{ site.baseurl }}/{{ page.version }}/elements/handList.html">handList</a>
         <a class="link_odd_elementSpec chip h" href="/{{ site.baseurl }}/{{ page.version }}/elements/handShift.html">handShift</a>
         <a class="link_odd_elementSpec chip h" href="/{{ site.baseurl }}/{{ page.version }}/elements/harm.html">harm</a>
         <a class="link_odd_elementSpec chip h" href="/{{ site.baseurl }}/{{ page.version }}/elements/harpPedal.html">harpPedal</a>
         <a class="link_odd_elementSpec chip h" href="/{{ site.baseurl }}/{{ page.version }}/elements/head.html">head</a>
         <a class="link_odd_elementSpec chip h" href="/{{ site.baseurl }}/{{ page.version }}/elements/height.html">height</a>
         <a class="link_odd_elementSpec chip h" href="/{{ site.baseurl }}/{{ page.version }}/elements/hex.html">hex</a>
         <a class="link_odd_elementSpec chip h" href="/{{ site.baseurl }}/{{ page.version }}/elements/history.html">history</a>
      </div>
      <div class="sortedInitials well i">
         <h3>i</h3>
         <a class="link_odd_elementSpec chip i" href="/{{ site.baseurl }}/{{ page.version }}/elements/identifier.html">identifier</a>
         <a class="link_odd_elementSpec chip i" href="/{{ site.baseurl }}/{{ page.version }}/elements/imprint.html">imprint</a>
         <a class="link_odd_elementSpec chip i" href="/{{ site.baseurl }}/{{ page.version }}/elements/incip.html">incip</a>
         <a class="link_odd_elementSpec chip i" href="/{{ site.baseurl }}/{{ page.version }}/elements/incipCode.html">incipCode</a>
         <a class="link_odd_elementSpec chip i" href="/{{ site.baseurl }}/{{ page.version }}/elements/incipText.html">incipText</a>
         <a class="link_odd_elementSpec chip i" href="/{{ site.baseurl }}/{{ page.version }}/elements/ineume.html">ineume</a>
         <a class="link_odd_elementSpec chip i" href="/{{ site.baseurl }}/{{ page.version }}/elements/inscription.html">inscription</a>
         <a class="link_odd_elementSpec chip i" href="/{{ site.baseurl }}/{{ page.version }}/elements/instrDef.html">instrDef</a>
         <a class="link_odd_elementSpec chip i" href="/{{ site.baseurl }}/{{ page.version }}/elements/instrGrp.html">instrGrp</a>
         <a class="link_odd_elementSpec chip i" href="/{{ site.baseurl }}/{{ page.version }}/elements/interpretation.html">interpretation</a>
         <a class="link_odd_elementSpec chip i" href="/{{ site.baseurl }}/{{ page.version }}/elements/item.html">item</a>
         <a class="link_odd_elementSpec chip i" href="/{{ site.baseurl }}/{{ page.version }}/elements/itemList.html">itemList</a>
      </div>
      <div class="sortedInitials well k">
         <h3>k</h3>
         <a class="link_odd_elementSpec chip k" href="/{{ site.baseurl }}/{{ page.version }}/elements/key.html">key</a>
         <a class="link_odd_elementSpec chip k" href="/{{ site.baseurl }}/{{ page.version }}/elements/keyAccid.html">keyAccid</a>
         <a class="link_odd_elementSpec chip k" href="/{{ site.baseurl }}/{{ page.version }}/elements/keySig.html">keySig</a>
      </div>
      <div class="sortedInitials well l">
         <h3>l</h3>
         <a class="link_odd_elementSpec chip l" href="/{{ site.baseurl }}/{{ page.version }}/elements/l.html">l</a>
         <a class="link_odd_elementSpec chip l" href="/{{ site.baseurl }}/{{ page.version }}/elements/label.html">label</a>
         <a class="link_odd_elementSpec chip l" href="/{{ site.baseurl }}/{{ page.version }}/elements/langUsage.html">langUsage</a>
         <a class="link_odd_elementSpec chip l" href="/{{ site.baseurl }}/{{ page.version }}/elements/language.html">language</a>
         <a class="link_odd_elementSpec chip l" href="/{{ site.baseurl }}/{{ page.version }}/elements/layer.html">layer</a>
         <a class="link_odd_elementSpec chip l" href="/{{ site.baseurl }}/{{ page.version }}/elements/layerDef.html">layerDef</a>
         <a class="link_odd_elementSpec chip l" href="/{{ site.baseurl }}/{{ page.version }}/elements/lb.html">lb</a>
         <a class="link_odd_elementSpec chip l" href="/{{ site.baseurl }}/{{ page.version }}/elements/lem.html">lem</a>
         <a class="link_odd_elementSpec chip l" href="/{{ site.baseurl }}/{{ page.version }}/elements/lg.html">lg</a>
         <a class="link_odd_elementSpec chip l" href="/{{ site.baseurl }}/{{ page.version }}/elements/li.html">li</a>
         <a class="link_odd_elementSpec chip l" href="/{{ site.baseurl }}/{{ page.version }}/elements/librettist.html">librettist</a>
         <a class="link_odd_elementSpec chip l" href="/{{ site.baseurl }}/{{ page.version }}/elements/ligature.html">ligature</a>
         <a class="link_odd_elementSpec chip l" href="/{{ site.baseurl }}/{{ page.version }}/elements/line.html">line</a>
         <a class="link_odd_elementSpec chip l" href="/{{ site.baseurl }}/{{ page.version }}/elements/list.html">list</a>
         <a class="link_odd_elementSpec chip l" href="/{{ site.baseurl }}/{{ page.version }}/elements/lyricist.html">lyricist</a>
         <a class="link_odd_elementSpec chip l" href="/{{ site.baseurl }}/{{ page.version }}/elements/lyrics.html">lyrics</a>
      </div>
      <div class="sortedInitials well m">
         <h3>m</h3>
         <a class="link_odd_elementSpec chip m" href="/{{ site.baseurl }}/{{ page.version }}/elements/mRest.html">mRest</a>
         <a class="link_odd_elementSpec chip m" href="/{{ site.baseurl }}/{{ page.version }}/elements/mRpt.html">mRpt</a>
         <a class="link_odd_elementSpec chip m" href="/{{ site.baseurl }}/{{ page.version }}/elements/mRpt2.html">mRpt2</a>
         <a class="link_odd_elementSpec chip m" href="/{{ site.baseurl }}/{{ page.version }}/elements/mSpace.html">mSpace</a>
         <a class="link_odd_elementSpec chip m" href="/{{ site.baseurl }}/{{ page.version }}/elements/mapping.html">mapping</a>
         <a class="link_odd_elementSpec chip m" href="/{{ site.baseurl }}/{{ page.version }}/elements/marker.html">marker</a>
         <a class="link_odd_elementSpec chip m" href="/{{ site.baseurl }}/{{ page.version }}/elements/mdiv.html">mdiv</a>
         <a class="link_odd_elementSpec chip m" href="/{{ site.baseurl }}/{{ page.version }}/elements/measure.html">measure</a>
         <a class="link_odd_elementSpec chip m" href="/{{ site.baseurl }}/{{ page.version }}/elements/mei.html">mei</a>
         <a class="link_odd_elementSpec chip m" href="/{{ site.baseurl }}/{{ page.version }}/elements/meiCorpus.html">meiCorpus</a>
         <a class="link_odd_elementSpec chip m" href="/{{ site.baseurl }}/{{ page.version }}/elements/meiHead.html">meiHead</a>
         <a class="link_odd_elementSpec chip m" href="/{{ site.baseurl }}/{{ page.version }}/elements/mensur.html">mensur</a>
         <a class="link_odd_elementSpec chip m" href="/{{ site.baseurl }}/{{ page.version }}/elements/mensuration.html">mensuration</a>
         <a class="link_odd_elementSpec chip m" href="/{{ site.baseurl }}/{{ page.version }}/elements/metaText.html">metaText</a>
         <a class="link_odd_elementSpec chip m" href="/{{ site.baseurl }}/{{ page.version }}/elements/meter.html">meter</a>
         <a class="link_odd_elementSpec chip m" href="/{{ site.baseurl }}/{{ page.version }}/elements/meterSig.html">meterSig</a>
         <a class="link_odd_elementSpec chip m" href="/{{ site.baseurl }}/{{ page.version }}/elements/meterSigGrp.html">meterSigGrp</a>
         <a class="link_odd_elementSpec chip m" href="/{{ site.baseurl }}/{{ page.version }}/elements/midi.html">midi</a>
         <a class="link_odd_elementSpec chip m" href="/{{ site.baseurl }}/{{ page.version }}/elements/mordent.html">mordent</a>
         <a class="link_odd_elementSpec chip m" href="/{{ site.baseurl }}/{{ page.version }}/elements/multiRest.html">multiRest</a>
         <a class="link_odd_elementSpec chip m" href="/{{ site.baseurl }}/{{ page.version }}/elements/multiRpt.html">multiRpt</a>
         <a class="link_odd_elementSpec chip m" href="/{{ site.baseurl }}/{{ page.version }}/elements/music.html">music</a>
      </div>
      <div class="sortedInitials well n">
         <h3>n</h3>
         <a class="link_odd_elementSpec chip n" href="/{{ site.baseurl }}/{{ page.version }}/elements/name.html">name</a>
         <a class="link_odd_elementSpec chip n" href="/{{ site.baseurl }}/{{ page.version }}/elements/nameLink.html">nameLink</a>
         <a class="link_odd_elementSpec chip n" href="/{{ site.baseurl }}/{{ page.version }}/elements/normalization.html">normalization</a>
         <a class="link_odd_elementSpec chip n" href="/{{ site.baseurl }}/{{ page.version }}/elements/note.html">note</a>
         <a class="link_odd_elementSpec chip n" href="/{{ site.baseurl }}/{{ page.version }}/elements/noteOff.html">noteOff</a>
         <a class="link_odd_elementSpec chip n" href="/{{ site.baseurl }}/{{ page.version }}/elements/noteOn.html">noteOn</a>
         <a class="link_odd_elementSpec chip n" href="/{{ site.baseurl }}/{{ page.version }}/elements/notesStmt.html">notesStmt</a>
         <a class="link_odd_elementSpec chip n" href="/{{ site.baseurl }}/{{ page.version }}/elements/num.html">num</a>
      </div>
      <div class="sortedInitials well o">
         <h3>o</h3>
         <a class="link_odd_elementSpec chip o" href="/{{ site.baseurl }}/{{ page.version }}/elements/octave.html">octave</a>
         <a class="link_odd_elementSpec chip o" href="/{{ site.baseurl }}/{{ page.version }}/elements/orig.html">orig</a>
         <a class="link_odd_elementSpec chip o" href="/{{ site.baseurl }}/{{ page.version }}/elements/ornam.html">ornam</a>
         <a class="link_odd_elementSpec chip o" href="/{{ site.baseurl }}/{{ page.version }}/elements/ossia.html">ossia</a>
         <a class="link_odd_elementSpec chip o" href="/{{ site.baseurl }}/{{ page.version }}/elements/otherChar.html">otherChar</a>
      </div>
      <div class="sortedInitials well p">
         <h3>p</h3>
         <a class="link_odd_elementSpec chip p" href="/{{ site.baseurl }}/{{ page.version }}/elements/p.html">p</a>
         <a class="link_odd_elementSpec chip p" href="/{{ site.baseurl }}/{{ page.version }}/elements/pad.html">pad</a>
         <a class="link_odd_elementSpec chip p" href="/{{ site.baseurl }}/{{ page.version }}/elements/part.html">part</a>
         <a class="link_odd_elementSpec chip p" href="/{{ site.baseurl }}/{{ page.version }}/elements/parts.html">parts</a>
         <a class="link_odd_elementSpec chip p" href="/{{ site.baseurl }}/{{ page.version }}/elements/pb.html">pb</a>
         <a class="link_odd_elementSpec chip p" href="/{{ site.baseurl }}/{{ page.version }}/elements/pedal.html">pedal</a>
         <a class="link_odd_elementSpec chip p" href="/{{ site.baseurl }}/{{ page.version }}/elements/perfDuration.html">perfDuration</a>
         <a class="link_odd_elementSpec chip p" href="/{{ site.baseurl }}/{{ page.version }}/elements/perfMedium.html">perfMedium</a>
         <a class="link_odd_elementSpec chip p" href="/{{ site.baseurl }}/{{ page.version }}/elements/perfRes.html">perfRes</a>
         <a class="link_odd_elementSpec chip p" href="/{{ site.baseurl }}/{{ page.version }}/elements/perfResList.html">perfResList</a>
         <a class="link_odd_elementSpec chip p" href="/{{ site.baseurl }}/{{ page.version }}/elements/performance.html">performance</a>
         <a class="link_odd_elementSpec chip p" href="/{{ site.baseurl }}/{{ page.version }}/elements/periodName.html">periodName</a>
         <a class="link_odd_elementSpec chip p" href="/{{ site.baseurl }}/{{ page.version }}/elements/persName.html">persName</a>
         <a class="link_odd_elementSpec chip p" href="/{{ site.baseurl }}/{{ page.version }}/elements/pgDesc.html">pgDesc</a>
         <a class="link_odd_elementSpec chip p" href="/{{ site.baseurl }}/{{ page.version }}/elements/pgFoot.html">pgFoot</a>
         <a class="link_odd_elementSpec chip p" href="/{{ site.baseurl }}/{{ page.version }}/elements/pgFoot2.html">pgFoot2</a>
         <a class="link_odd_elementSpec chip p" href="/{{ site.baseurl }}/{{ page.version }}/elements/pgHead.html">pgHead</a>
         <a class="link_odd_elementSpec chip p" href="/{{ site.baseurl }}/{{ page.version }}/elements/pgHead2.html">pgHead2</a>
         <a class="link_odd_elementSpec chip p" href="/{{ site.baseurl }}/{{ page.version }}/elements/phrase.html">phrase</a>
         <a class="link_odd_elementSpec chip p" href="/{{ site.baseurl }}/{{ page.version }}/elements/physDesc.html">physDesc</a>
         <a class="link_odd_elementSpec chip p" href="/{{ site.baseurl }}/{{ page.version }}/elements/physLoc.html">physLoc</a>
         <a class="link_odd_elementSpec chip p" href="/{{ site.baseurl }}/{{ page.version }}/elements/physMedium.html">physMedium</a>
         <a class="link_odd_elementSpec chip p" href="/{{ site.baseurl }}/{{ page.version }}/elements/plateNum.html">plateNum</a>
         <a class="link_odd_elementSpec chip p" href="/{{ site.baseurl }}/{{ page.version }}/elements/playingSpeed.html">playingSpeed</a>
         <a class="link_odd_elementSpec chip p" href="/{{ site.baseurl }}/{{ page.version }}/elements/port.html">port</a>
         <a class="link_odd_elementSpec chip p" href="/{{ site.baseurl }}/{{ page.version }}/elements/postBox.html">postBox</a>
         <a class="link_odd_elementSpec chip p" href="/{{ site.baseurl }}/{{ page.version }}/elements/postCode.html">postCode</a>
         <a class="link_odd_elementSpec chip p" href="/{{ site.baseurl }}/{{ page.version }}/elements/price.html">price</a>
         <a class="link_odd_elementSpec chip p" href="/{{ site.baseurl }}/{{ page.version }}/elements/prog.html">prog</a>
         <a class="link_odd_elementSpec chip p" href="/{{ site.baseurl }}/{{ page.version }}/elements/projectDesc.html">projectDesc</a>
         <a class="link_odd_elementSpec chip p" href="/{{ site.baseurl }}/{{ page.version }}/elements/propName.html">propName</a>
         <a class="link_odd_elementSpec chip p" href="/{{ site.baseurl }}/{{ page.version }}/elements/propValue.html">propValue</a>
         <a class="link_odd_elementSpec chip p" href="/{{ site.baseurl }}/{{ page.version }}/elements/proport.html">proport</a>
         <a class="link_odd_elementSpec chip p" href="/{{ site.baseurl }}/{{ page.version }}/elements/provenance.html">provenance</a>
         <a class="link_odd_elementSpec chip p" href="/{{ site.baseurl }}/{{ page.version }}/elements/ptr.html">ptr</a>
         <a class="link_odd_elementSpec chip p" href="/{{ site.baseurl }}/{{ page.version }}/elements/pubPlace.html">pubPlace</a>
         <a class="link_odd_elementSpec chip p" href="/{{ site.baseurl }}/{{ page.version }}/elements/pubStmt.html">pubStmt</a>
         <a class="link_odd_elementSpec chip p" href="/{{ site.baseurl }}/{{ page.version }}/elements/publisher.html">publisher</a>
      </div>
      <div class="sortedInitials well q">
         <h3>q</h3>
         <a class="link_odd_elementSpec chip q" href="/{{ site.baseurl }}/{{ page.version }}/elements/quote.html">quote</a>
      </div>
      <div class="sortedInitials well r">
         <h3>r</h3>
         <a class="link_odd_elementSpec chip r" href="/{{ site.baseurl }}/{{ page.version }}/elements/rdg.html">rdg</a>
         <a class="link_odd_elementSpec chip r" href="/{{ site.baseurl }}/{{ page.version }}/elements/recipient.html">recipient</a>
         <a class="link_odd_elementSpec chip r" href="/{{ site.baseurl }}/{{ page.version }}/elements/recording.html">recording</a>
         <a class="link_odd_elementSpec chip r" href="/{{ site.baseurl }}/{{ page.version }}/elements/ref.html">ref</a>
         <a class="link_odd_elementSpec chip r" href="/{{ site.baseurl }}/{{ page.version }}/elements/reg.html">reg</a>
         <a class="link_odd_elementSpec chip r" href="/{{ site.baseurl }}/{{ page.version }}/elements/region.html">region</a>
         <a class="link_odd_elementSpec chip r" href="/{{ site.baseurl }}/{{ page.version }}/elements/reh.html">reh</a>
         <a class="link_odd_elementSpec chip r" href="/{{ site.baseurl }}/{{ page.version }}/elements/relatedItem.html">relatedItem</a>
         <a class="link_odd_elementSpec chip r" href="/{{ site.baseurl }}/{{ page.version }}/elements/relation.html">relation</a>
         <a class="link_odd_elementSpec chip r" href="/{{ site.baseurl }}/{{ page.version }}/elements/relationList.html">relationList</a>
         <a class="link_odd_elementSpec chip r" href="/{{ site.baseurl }}/{{ page.version }}/elements/rend.html">rend</a>
         <a class="link_odd_elementSpec chip r" href="/{{ site.baseurl }}/{{ page.version }}/elements/repository.html">repository</a>
         <a class="link_odd_elementSpec chip r" href="/{{ site.baseurl }}/{{ page.version }}/elements/resp.html">resp</a>
         <a class="link_odd_elementSpec chip r" href="/{{ site.baseurl }}/{{ page.version }}/elements/respStmt.html">respStmt</a>
         <a class="link_odd_elementSpec chip r" href="/{{ site.baseurl }}/{{ page.version }}/elements/rest.html">rest</a>
         <a class="link_odd_elementSpec chip r" href="/{{ site.baseurl }}/{{ page.version }}/elements/restore.html">restore</a>
         <a class="link_odd_elementSpec chip r" href="/{{ site.baseurl }}/{{ page.version }}/elements/revisionDesc.html">revisionDesc</a>
         <a class="link_odd_elementSpec chip r" href="/{{ site.baseurl }}/{{ page.version }}/elements/role.html">role</a>
         <a class="link_odd_elementSpec chip r" href="/{{ site.baseurl }}/{{ page.version }}/elements/roleDesc.html">roleDesc</a>
         <a class="link_odd_elementSpec chip r" href="/{{ site.baseurl }}/{{ page.version }}/elements/roleName.html">roleName</a>
      </div>
      <div class="sortedInitials well s">
         <h3>s</h3>
         <a class="link_odd_elementSpec chip s" href="/{{ site.baseurl }}/{{ page.version }}/elements/samplingDecl.html">samplingDecl</a>
         <a class="link_odd_elementSpec chip s" href="/{{ site.baseurl }}/{{ page.version }}/elements/sb.html">sb</a>
         <a class="link_odd_elementSpec chip s" href="/{{ site.baseurl }}/{{ page.version }}/elements/score.html">score</a>
         <a class="link_odd_elementSpec chip s" href="/{{ site.baseurl }}/{{ page.version }}/elements/scoreDef.html">scoreDef</a>
         <a class="link_odd_elementSpec chip s" href="/{{ site.baseurl }}/{{ page.version }}/elements/scoreFormat.html">scoreFormat</a>
         <a class="link_odd_elementSpec chip s" href="/{{ site.baseurl }}/{{ page.version }}/elements/section.html">section</a>
         <a class="link_odd_elementSpec chip s" href="/{{ site.baseurl }}/{{ page.version }}/elements/segmentation.html">segmentation</a>
         <a class="link_odd_elementSpec chip s" href="/{{ site.baseurl }}/{{ page.version }}/elements/seqNum.html">seqNum</a>
         <a class="link_odd_elementSpec chip s" href="/{{ site.baseurl }}/{{ page.version }}/elements/series.html">series</a>
         <a class="link_odd_elementSpec chip s" href="/{{ site.baseurl }}/{{ page.version }}/elements/seriesStmt.html">seriesStmt</a>
         <a class="link_odd_elementSpec chip s" href="/{{ site.baseurl }}/{{ page.version }}/elements/settlement.html">settlement</a>
         <a class="link_odd_elementSpec chip s" href="/{{ site.baseurl }}/{{ page.version }}/elements/sic.html">sic</a>
         <a class="link_odd_elementSpec chip s" href="/{{ site.baseurl }}/{{ page.version }}/elements/slur.html">slur</a>
         <a class="link_odd_elementSpec chip s" href="/{{ site.baseurl }}/{{ page.version }}/elements/soundChan.html">soundChan</a>
         <a class="link_odd_elementSpec chip s" href="/{{ site.baseurl }}/{{ page.version }}/elements/source.html">source</a>
         <a class="link_odd_elementSpec chip s" href="/{{ site.baseurl }}/{{ page.version }}/elements/sourceDesc.html">sourceDesc</a>
         <a class="link_odd_elementSpec chip s" href="/{{ site.baseurl }}/{{ page.version }}/elements/space.html">space</a>
         <a class="link_odd_elementSpec chip s" href="/{{ site.baseurl }}/{{ page.version }}/elements/specRepro.html">specRepro</a>
         <a class="link_odd_elementSpec chip s" href="/{{ site.baseurl }}/{{ page.version }}/elements/sponsor.html">sponsor</a>
         <a class="link_odd_elementSpec chip s" href="/{{ site.baseurl }}/{{ page.version }}/elements/stack.html">stack</a>
         <a class="link_odd_elementSpec chip s" href="/{{ site.baseurl }}/{{ page.version }}/elements/staff.html">staff</a>
         <a class="link_odd_elementSpec chip s" href="/{{ site.baseurl }}/{{ page.version }}/elements/staffDef.html">staffDef</a>
         <a class="link_odd_elementSpec chip s" href="/{{ site.baseurl }}/{{ page.version }}/elements/staffGrp.html">staffGrp</a>
         <a class="link_odd_elementSpec chip s" href="/{{ site.baseurl }}/{{ page.version }}/elements/stdVals.html">stdVals</a>
         <a class="link_odd_elementSpec chip s" href="/{{ site.baseurl }}/{{ page.version }}/elements/street.html">street</a>
         <a class="link_odd_elementSpec chip s" href="/{{ site.baseurl }}/{{ page.version }}/elements/styleName.html">styleName</a>
         <a class="link_odd_elementSpec chip s" href="/{{ site.baseurl }}/{{ page.version }}/elements/subst.html">subst</a>
         <a class="link_odd_elementSpec chip s" href="/{{ site.baseurl }}/{{ page.version }}/elements/supplied.html">supplied</a>
         <a class="link_odd_elementSpec chip s" href="/{{ site.baseurl }}/{{ page.version }}/elements/surface.html">surface</a>
         <a class="link_odd_elementSpec chip s" href="/{{ site.baseurl }}/{{ page.version }}/elements/syl.html">syl</a>
         <a class="link_odd_elementSpec chip s" href="/{{ site.baseurl }}/{{ page.version }}/elements/syllable.html">syllable</a>
         <a class="link_odd_elementSpec chip s" href="/{{ site.baseurl }}/{{ page.version }}/elements/symName.html">symName</a>
         <a class="link_odd_elementSpec chip s" href="/{{ site.baseurl }}/{{ page.version }}/elements/symProp.html">symProp</a>
         <a class="link_odd_elementSpec chip s" href="/{{ site.baseurl }}/{{ page.version }}/elements/symbol.html">symbol</a>
         <a class="link_odd_elementSpec chip s" href="/{{ site.baseurl }}/{{ page.version }}/elements/symbolDef.html">symbolDef</a>
         <a class="link_odd_elementSpec chip s" href="/{{ site.baseurl }}/{{ page.version }}/elements/symbolTable.html">symbolTable</a>
         <a class="link_odd_elementSpec chip s" href="/{{ site.baseurl }}/{{ page.version }}/elements/sysReq.html">sysReq</a>
      </div>
      <div class="sortedInitials well t">
         <h3>t</h3>
         <a class="link_odd_elementSpec chip t" href="/{{ site.baseurl }}/{{ page.version }}/elements/table.html">table</a>
         <a class="link_odd_elementSpec chip t" href="/{{ site.baseurl }}/{{ page.version }}/elements/td.html">td</a>
         <a class="link_odd_elementSpec chip t" href="/{{ site.baseurl }}/{{ page.version }}/elements/tempo.html">tempo</a>
         <a class="link_odd_elementSpec chip t" href="/{{ site.baseurl }}/{{ page.version }}/elements/term.html">term</a>
         <a class="link_odd_elementSpec chip t" href="/{{ site.baseurl }}/{{ page.version }}/elements/termList.html">termList</a>
         <a class="link_odd_elementSpec chip t" href="/{{ site.baseurl }}/{{ page.version }}/elements/textLang.html">textLang</a>
         <a class="link_odd_elementSpec chip t" href="/{{ site.baseurl }}/{{ page.version }}/elements/th.html">th</a>
         <a class="link_odd_elementSpec chip t" href="/{{ site.baseurl }}/{{ page.version }}/elements/tie.html">tie</a>
         <a class="link_odd_elementSpec chip t" href="/{{ site.baseurl }}/{{ page.version }}/elements/title.html">title</a>
         <a class="link_odd_elementSpec chip t" href="/{{ site.baseurl }}/{{ page.version }}/elements/titlePage.html">titlePage</a>
         <a class="link_odd_elementSpec chip t" href="/{{ site.baseurl }}/{{ page.version }}/elements/titleStmt.html">titleStmt</a>
         <a class="link_odd_elementSpec chip t" href="/{{ site.baseurl }}/{{ page.version }}/elements/tr.html">tr</a>
         <a class="link_odd_elementSpec chip t" href="/{{ site.baseurl }}/{{ page.version }}/elements/trackConfig.html">trackConfig</a>
         <a class="link_odd_elementSpec chip t" href="/{{ site.baseurl }}/{{ page.version }}/elements/treatHist.html">treatHist</a>
         <a class="link_odd_elementSpec chip t" href="/{{ site.baseurl }}/{{ page.version }}/elements/treatSched.html">treatSched</a>
         <a class="link_odd_elementSpec chip t" href="/{{ site.baseurl }}/{{ page.version }}/elements/trill.html">trill</a>
         <a class="link_odd_elementSpec chip t" href="/{{ site.baseurl }}/{{ page.version }}/elements/trkName.html">trkName</a>
         <a class="link_odd_elementSpec chip t" href="/{{ site.baseurl }}/{{ page.version }}/elements/tuplet.html">tuplet</a>
         <a class="link_odd_elementSpec chip t" href="/{{ site.baseurl }}/{{ page.version }}/elements/tupletSpan.html">tupletSpan</a>
         <a class="link_odd_elementSpec chip t" href="/{{ site.baseurl }}/{{ page.version }}/elements/turn.html">turn</a>
      </div>
      <div class="sortedInitials well u">
         <h3>u</h3>
         <a class="link_odd_elementSpec chip u" href="/{{ site.baseurl }}/{{ page.version }}/elements/unclear.html">unclear</a>
         <a class="link_odd_elementSpec chip u" href="/{{ site.baseurl }}/{{ page.version }}/elements/uneume.html">uneume</a>
         <a class="link_odd_elementSpec chip u" href="/{{ site.baseurl }}/{{ page.version }}/elements/unpub.html">unpub</a>
         <a class="link_odd_elementSpec chip u" href="/{{ site.baseurl }}/{{ page.version }}/elements/useRestrict.html">useRestrict</a>
      </div>
      <div class="sortedInitials well v">
         <h3>v</h3>
         <a class="link_odd_elementSpec chip v" href="/{{ site.baseurl }}/{{ page.version }}/elements/vel.html">vel</a>
         <a class="link_odd_elementSpec chip v" href="/{{ site.baseurl }}/{{ page.version }}/elements/verse.html">verse</a>
      </div>
      <div class="sortedInitials well w">
         <h3>w</h3>
         <a class="link_odd_elementSpec chip w" href="/{{ site.baseurl }}/{{ page.version }}/elements/watermark.html">watermark</a>
         <a class="link_odd_elementSpec chip w" href="/{{ site.baseurl }}/{{ page.version }}/elements/when.html">when</a>
         <a class="link_odd_elementSpec chip w" href="/{{ site.baseurl }}/{{ page.version }}/elements/width.html">width</a>
         <a class="link_odd_elementSpec chip w" href="/{{ site.baseurl }}/{{ page.version }}/elements/work.html">work</a>
         <a class="link_odd_elementSpec chip w" href="/{{ site.baseurl }}/{{ page.version }}/elements/workDesc.html">workDesc</a>
      </div>
      <div class="sortedInitials well z">
         <h3>z</h3>
         <a class="link_odd_elementSpec chip z" href="/{{ site.baseurl }}/{{ page.version }}/elements/zone.html">zone</a>
      </div>
   </div>
</div>