v4/elements.md
---
layout: sidebar
sidebar: s1
title: "Elements"
version: "v4"
---
<div>
   <h3 class="widget-title">MEI Elements</h3>
   <div class="textwidget">
      <div class="sortedInitials well a">
         <h3>a</h3><a class="link_odd_elementSpec chip a" href="{{ site.baseurl }}/{{ page.version }}/elements/abbr.html">abbr</a><a class="link_odd_elementSpec chip a" href="{{ site.baseurl }}/{{ page.version }}/elements/accmat.html">accMat</a><a class="link_odd_elementSpec chip a" href="{{ site.baseurl }}/{{ page.version }}/elements/accessrestrict.html">accessRestrict</a><a class="link_odd_elementSpec chip a" href="{{ site.baseurl }}/{{ page.version }}/elements/accid.html">accid</a><a class="link_odd_elementSpec chip a" href="{{ site.baseurl }}/{{ page.version }}/elements/acquisition.html">acquisition</a><a class="link_odd_elementSpec chip a" href="{{ site.baseurl }}/{{ page.version }}/elements/actor.html">actor</a><a class="link_odd_elementSpec chip a" href="{{ site.baseurl }}/{{ page.version }}/elements/add.html">add</a><a class="link_odd_elementSpec chip a" href="{{ site.baseurl }}/{{ page.version }}/elements/adddesc.html">addDesc</a><a class="link_odd_elementSpec chip a" href="{{ site.baseurl }}/{{ page.version }}/elements/addname.html">addName</a><a class="link_odd_elementSpec chip a" href="{{ site.baseurl }}/{{ page.version }}/elements/addrline.html">addrLine</a><a class="link_odd_elementSpec chip a" href="{{ site.baseurl }}/{{ page.version }}/elements/address.html">address</a><a class="link_odd_elementSpec chip a" href="{{ site.baseurl }}/{{ page.version }}/elements/altid.html">altId</a><a class="link_odd_elementSpec chip a" href="{{ site.baseurl }}/{{ page.version }}/elements/ambnote.html">ambNote</a><a class="link_odd_elementSpec chip a" href="{{ site.baseurl }}/{{ page.version }}/elements/ambitus.html">ambitus</a><a class="link_odd_elementSpec chip a" href="{{ site.baseurl }}/{{ page.version }}/elements/analytic.html">analytic</a><a class="link_odd_elementSpec chip a" href="{{ site.baseurl }}/{{ page.version }}/elements/anchoredtext.html">anchoredText</a><a class="link_odd_elementSpec chip a" href="{{ site.baseurl }}/{{ page.version }}/elements/annot.html">annot</a><a class="link_odd_elementSpec chip a" href="{{ site.baseurl }}/{{ page.version }}/elements/app.html">app</a><a class="link_odd_elementSpec chip a" href="{{ site.baseurl }}/{{ page.version }}/elements/appinfo.html">appInfo</a><a class="link_odd_elementSpec chip a" href="{{ site.baseurl }}/{{ page.version }}/elements/application.html">application</a><a class="link_odd_elementSpec chip a" href="{{ site.baseurl }}/{{ page.version }}/elements/argument.html">argument</a><a class="link_odd_elementSpec chip a" href="{{ site.baseurl }}/{{ page.version }}/elements/arpeg.html">arpeg</a><a class="link_odd_elementSpec chip a" href="{{ site.baseurl }}/{{ page.version }}/elements/arranger.html">arranger</a><a class="link_odd_elementSpec chip a" href="{{ site.baseurl }}/{{ page.version }}/elements/artic.html">artic</a><a class="link_odd_elementSpec chip a" href="{{ site.baseurl }}/{{ page.version }}/elements/attusage.html">attUsage</a><a class="link_odd_elementSpec chip a" href="{{ site.baseurl }}/{{ page.version }}/elements/attacca.html">attacca</a><a class="link_odd_elementSpec chip a" href="{{ site.baseurl }}/{{ page.version }}/elements/audience.html">audience</a><a class="link_odd_elementSpec chip a" href="{{ site.baseurl }}/{{ page.version }}/elements/author.html">author</a><a class="link_odd_elementSpec chip a" href="{{ site.baseurl }}/{{ page.version }}/elements/avfile.html">avFile</a><a class="link_odd_elementSpec chip a" href="{{ site.baseurl }}/{{ page.version }}/elements/availability.html">availability</a></div>
      <div class="sortedInitials well b">
         <h3>b</h3><a class="link_odd_elementSpec chip b" href="{{ site.baseurl }}/{{ page.version }}/elements/btrem.html">bTrem</a><a class="link_odd_elementSpec chip b" href="{{ site.baseurl }}/{{ page.version }}/elements/back.html">back</a><a class="link_odd_elementSpec chip b" href="{{ site.baseurl }}/{{ page.version }}/elements/barline.html">barLine</a><a class="link_odd_elementSpec chip b" href="{{ site.baseurl }}/{{ page.version }}/elements/barre.html">barre</a><a class="link_odd_elementSpec chip b" href="{{ site.baseurl }}/{{ page.version }}/elements/beam.html">beam</a><a class="link_odd_elementSpec chip b" href="{{ site.baseurl }}/{{ page.version }}/elements/beamspan.html">beamSpan</a><a class="link_odd_elementSpec chip b" href="{{ site.baseurl }}/{{ page.version }}/elements/beatrpt.html">beatRpt</a><a class="link_odd_elementSpec chip b" href="{{ site.baseurl }}/{{ page.version }}/elements/bend.html">bend</a><a class="link_odd_elementSpec chip b" href="{{ site.baseurl }}/{{ page.version }}/elements/bibl.html">bibl</a><a class="link_odd_elementSpec chip b" href="{{ site.baseurl }}/{{ page.version }}/elements/bibllist.html">biblList</a><a class="link_odd_elementSpec chip b" href="{{ site.baseurl }}/{{ page.version }}/elements/biblscope.html">biblScope</a><a class="link_odd_elementSpec chip b" href="{{ site.baseurl }}/{{ page.version }}/elements/biblstruct.html">biblStruct</a><a class="link_odd_elementSpec chip b" href="{{ site.baseurl }}/{{ page.version }}/elements/bifolium.html">bifolium</a><a class="link_odd_elementSpec chip b" href="{{ site.baseurl }}/{{ page.version }}/elements/binding.html">binding</a><a class="link_odd_elementSpec chip b" href="{{ site.baseurl }}/{{ page.version }}/elements/bindingdesc.html">bindingDesc</a><a class="link_odd_elementSpec chip b" href="{{ site.baseurl }}/{{ page.version }}/elements/bloc.html">bloc</a><a class="link_odd_elementSpec chip b" href="{{ site.baseurl }}/{{ page.version }}/elements/body.html">body</a><a class="link_odd_elementSpec chip b" href="{{ site.baseurl }}/{{ page.version }}/elements/bracketspan.html">bracketSpan</a><a class="link_odd_elementSpec chip b" href="{{ site.baseurl }}/{{ page.version }}/elements/breath.html">breath</a><a class="link_odd_elementSpec chip b" href="{{ site.baseurl }}/{{ page.version }}/elements/byline.html">byline</a></div>
      <div class="sortedInitials well c">
         <h3>c</h3><a class="link_odd_elementSpec chip c" href="{{ site.baseurl }}/{{ page.version }}/elements/caesura.html">caesura</a><a class="link_odd_elementSpec chip c" href="{{ site.baseurl }}/{{ page.version }}/elements/caption.html">caption</a><a class="link_odd_elementSpec chip c" href="{{ site.baseurl }}/{{ page.version }}/elements/capturemode.html">captureMode</a><a class="link_odd_elementSpec chip c" href="{{ site.baseurl }}/{{ page.version }}/elements/carrierform.html">carrierForm</a><a class="link_odd_elementSpec chip c" href="{{ site.baseurl }}/{{ page.version }}/elements/castgrp.html">castGrp</a><a class="link_odd_elementSpec chip c" href="{{ site.baseurl }}/{{ page.version }}/elements/castitem.html">castItem</a><a class="link_odd_elementSpec chip c" href="{{ site.baseurl }}/{{ page.version }}/elements/castlist.html">castList</a><a class="link_odd_elementSpec chip c" href="{{ site.baseurl }}/{{ page.version }}/elements/catrel.html">catRel</a><a class="link_odd_elementSpec chip c" href="{{ site.baseurl }}/{{ page.version }}/elements/catchwords.html">catchwords</a><a class="link_odd_elementSpec chip c" href="{{ site.baseurl }}/{{ page.version }}/elements/category.html">category</a><a class="link_odd_elementSpec chip c" href="{{ site.baseurl }}/{{ page.version }}/elements/cb.html">cb</a><a class="link_odd_elementSpec chip c" href="{{ site.baseurl }}/{{ page.version }}/elements/cc.html">cc</a><a class="link_odd_elementSpec chip c" href="{{ site.baseurl }}/{{ page.version }}/elements/chan.html">chan</a><a class="link_odd_elementSpec chip c" href="{{ site.baseurl }}/{{ page.version }}/elements/chanpr.html">chanPr</a><a class="link_odd_elementSpec chip c" href="{{ site.baseurl }}/{{ page.version }}/elements/change.html">change</a><a class="link_odd_elementSpec chip c" href="{{ site.baseurl }}/{{ page.version }}/elements/changedesc.html">changeDesc</a><a class="link_odd_elementSpec chip c" href="{{ site.baseurl }}/{{ page.version }}/elements/choice.html">choice</a><a class="link_odd_elementSpec chip c" href="{{ site.baseurl }}/{{ page.version }}/elements/chord.html">chord</a><a class="link_odd_elementSpec chip c" href="{{ site.baseurl }}/{{ page.version }}/elements/chorddef.html">chordDef</a><a class="link_odd_elementSpec chip c" href="{{ site.baseurl }}/{{ page.version }}/elements/chordmember.html">chordMember</a><a class="link_odd_elementSpec chip c" href="{{ site.baseurl }}/{{ page.version }}/elements/chordtable.html">chordTable</a><a class="link_odd_elementSpec chip c" href="{{ site.baseurl }}/{{ page.version }}/elements/classdecls.html">classDecls</a><a class="link_odd_elementSpec chip c" href="{{ site.baseurl }}/{{ page.version }}/elements/classification.html">classification</a><a class="link_odd_elementSpec chip c" href="{{ site.baseurl }}/{{ page.version }}/elements/clef.html">clef</a><a class="link_odd_elementSpec chip c" href="{{ site.baseurl }}/{{ page.version }}/elements/clefgrp.html">clefGrp</a><a class="link_odd_elementSpec chip c" href="{{ site.baseurl }}/{{ page.version }}/elements/clip.html">clip</a><a class="link_odd_elementSpec chip c" href="{{ site.baseurl }}/{{ page.version }}/elements/collayout.html">colLayout</a><a class="link_odd_elementSpec chip c" href="{{ site.baseurl }}/{{ page.version }}/elements/collation.html">collation</a><a class="link_odd_elementSpec chip c" href="{{ site.baseurl }}/{{ page.version }}/elements/colophon.html">colophon</a><a class="link_odd_elementSpec chip c" href="{{ site.baseurl }}/{{ page.version }}/elements/componentlist.html">componentList</a><a class="link_odd_elementSpec chip c" href="{{ site.baseurl }}/{{ page.version }}/elements/composer.html">composer</a><a class="link_odd_elementSpec chip c" href="{{ site.baseurl }}/{{ page.version }}/elements/condition.html">condition</a><a class="link_odd_elementSpec chip c" href="{{ site.baseurl }}/{{ page.version }}/elements/contentitem.html">contentItem</a><a class="link_odd_elementSpec chip c" href="{{ site.baseurl }}/{{ page.version }}/elements/contents.html">contents</a><a class="link_odd_elementSpec chip c" href="{{ site.baseurl }}/{{ page.version }}/elements/context.html">context</a><a class="link_odd_elementSpec chip c" href="{{ site.baseurl }}/{{ page.version }}/elements/contributor.html">contributor</a><a class="link_odd_elementSpec chip c" href="{{ site.baseurl }}/{{ page.version }}/elements/corpname.html">corpName</a><a class="link_odd_elementSpec chip c" href="{{ site.baseurl }}/{{ page.version }}/elements/corr.html">corr</a><a class="link_odd_elementSpec chip c" href="{{ site.baseurl }}/{{ page.version }}/elements/correction.html">correction</a><a class="link_odd_elementSpec chip c" href="{{ site.baseurl }}/{{ page.version }}/elements/country.html">country</a><a class="link_odd_elementSpec chip c" href="{{ site.baseurl }}/{{ page.version }}/elements/cpmark.html">cpMark</a><a class="link_odd_elementSpec chip c" href="{{ site.baseurl }}/{{ page.version }}/elements/creation.html">creation</a><a class="link_odd_elementSpec chip c" href="{{ site.baseurl }}/{{ page.version }}/elements/cue.html">cue</a><a class="link_odd_elementSpec chip c" href="{{ site.baseurl }}/{{ page.version }}/elements/curve.html">curve</a><a class="link_odd_elementSpec chip c" href="{{ site.baseurl }}/{{ page.version }}/elements/custos.html">custos</a><a class="link_odd_elementSpec chip c" href="{{ site.baseurl }}/{{ page.version }}/elements/cutout.html">cutout</a></div>
      <div class="sortedInitials well d">
         <h3>d</h3><a class="link_odd_elementSpec chip d" href="{{ site.baseurl }}/{{ page.version }}/elements/damage.html">damage</a><a class="link_odd_elementSpec chip d" href="{{ site.baseurl }}/{{ page.version }}/elements/date.html">date</a><a class="link_odd_elementSpec chip d" href="{{ site.baseurl }}/{{ page.version }}/elements/decodesc.html">decoDesc</a><a class="link_odd_elementSpec chip d" href="{{ site.baseurl }}/{{ page.version }}/elements/deconote.html">decoNote</a><a class="link_odd_elementSpec chip d" href="{{ site.baseurl }}/{{ page.version }}/elements/dedicatee.html">dedicatee</a><a class="link_odd_elementSpec chip d" href="{{ site.baseurl }}/{{ page.version }}/elements/dedication.html">dedication</a><a class="link_odd_elementSpec chip d" href="{{ site.baseurl }}/{{ page.version }}/elements/del.html">del</a><a class="link_odd_elementSpec chip d" href="{{ site.baseurl }}/{{ page.version }}/elements/depth.html">depth</a><a class="link_odd_elementSpec chip d" href="{{ site.baseurl }}/{{ page.version }}/elements/desc.html">desc</a><a class="link_odd_elementSpec chip d" href="{{ site.baseurl }}/{{ page.version }}/elements/dim.html">dim</a><a class="link_odd_elementSpec chip d" href="{{ site.baseurl }}/{{ page.version }}/elements/dimensions.html">dimensions</a><a class="link_odd_elementSpec chip d" href="{{ site.baseurl }}/{{ page.version }}/elements/dir.html">dir</a><a class="link_odd_elementSpec chip d" href="{{ site.baseurl }}/{{ page.version }}/elements/distributor.html">distributor</a><a class="link_odd_elementSpec chip d" href="{{ site.baseurl }}/{{ page.version }}/elements/district.html">district</a><a class="link_odd_elementSpec chip d" href="{{ site.baseurl }}/{{ page.version }}/elements/div.html">div</a><a class="link_odd_elementSpec chip d" href="{{ site.baseurl }}/{{ page.version }}/elements/domainsdecl.html">domainsDecl</a><a class="link_odd_elementSpec chip d" href="{{ site.baseurl }}/{{ page.version }}/elements/dot.html">dot</a><a class="link_odd_elementSpec chip d" href="{{ site.baseurl }}/{{ page.version }}/elements/dynam.html">dynam</a></div>
      <div class="sortedInitials well e">
         <h3>e</h3><a class="link_odd_elementSpec chip e" href="{{ site.baseurl }}/{{ page.version }}/elements/edition.html">edition</a><a class="link_odd_elementSpec chip e" href="{{ site.baseurl }}/{{ page.version }}/elements/editionstmt.html">editionStmt</a><a class="link_odd_elementSpec chip e" href="{{ site.baseurl }}/{{ page.version }}/elements/editor.html">editor</a><a class="link_odd_elementSpec chip e" href="{{ site.baseurl }}/{{ page.version }}/elements/editorialdecl.html">editorialDecl</a><a class="link_odd_elementSpec chip e" href="{{ site.baseurl }}/{{ page.version }}/elements/encodingdesc.html">encodingDesc</a><a class="link_odd_elementSpec chip e" href="{{ site.baseurl }}/{{ page.version }}/elements/ending.html">ending</a><a class="link_odd_elementSpec chip e" href="{{ site.baseurl }}/{{ page.version }}/elements/epigraph.html">epigraph</a><a class="link_odd_elementSpec chip e" href="{{ site.baseurl }}/{{ page.version }}/elements/episema.html">episema</a><a class="link_odd_elementSpec chip e" href="{{ site.baseurl }}/{{ page.version }}/elements/event.html">event</a><a class="link_odd_elementSpec chip e" href="{{ site.baseurl }}/{{ page.version }}/elements/eventlist.html">eventList</a><a class="link_odd_elementSpec chip e" href="{{ site.baseurl }}/{{ page.version }}/elements/exhibhist.html">exhibHist</a><a class="link_odd_elementSpec chip e" href="{{ site.baseurl }}/{{ page.version }}/elements/expan.html">expan</a><a class="link_odd_elementSpec chip e" href="{{ site.baseurl }}/{{ page.version }}/elements/expansion.html">expansion</a><a class="link_odd_elementSpec chip e" href="{{ site.baseurl }}/{{ page.version }}/elements/explicit.html">explicit</a><a class="link_odd_elementSpec chip e" href="{{ site.baseurl }}/{{ page.version }}/elements/expression.html">expression</a><a class="link_odd_elementSpec chip e" href="{{ site.baseurl }}/{{ page.version }}/elements/expressionlist.html">expressionList</a><a class="link_odd_elementSpec chip e" href="{{ site.baseurl }}/{{ page.version }}/elements/extmeta.html">extMeta</a><a class="link_odd_elementSpec chip e" href="{{ site.baseurl }}/{{ page.version }}/elements/extent.html">extent</a></div>
      <div class="sortedInitials well f">
         <h3>f</h3><a class="link_odd_elementSpec chip f" href="{{ site.baseurl }}/{{ page.version }}/elements/f.html">f</a><a class="link_odd_elementSpec chip f" href="{{ site.baseurl }}/{{ page.version }}/elements/ftrem.html">fTrem</a><a class="link_odd_elementSpec chip f" href="{{ site.baseurl }}/{{ page.version }}/elements/facsimile.html">facsimile</a><a class="link_odd_elementSpec chip f" href="{{ site.baseurl }}/{{ page.version }}/elements/famname.html">famName</a><a class="link_odd_elementSpec chip f" href="{{ site.baseurl }}/{{ page.version }}/elements/fb.html">fb</a><a class="link_odd_elementSpec chip f" href="{{ site.baseurl }}/{{ page.version }}/elements/fermata.html">fermata</a><a class="link_odd_elementSpec chip f" href="{{ site.baseurl }}/{{ page.version }}/elements/fig.html">fig</a><a class="link_odd_elementSpec chip f" href="{{ site.baseurl }}/{{ page.version }}/elements/figdesc.html">figDesc</a><a class="link_odd_elementSpec chip f" href="{{ site.baseurl }}/{{ page.version }}/elements/filechar.html">fileChar</a><a class="link_odd_elementSpec chip f" href="{{ site.baseurl }}/{{ page.version }}/elements/filedesc.html">fileDesc</a><a class="link_odd_elementSpec chip f" href="{{ site.baseurl }}/{{ page.version }}/elements/fing.html">fing</a><a class="link_odd_elementSpec chip f" href="{{ site.baseurl }}/{{ page.version }}/elements/finggrp.html">fingGrp</a><a class="link_odd_elementSpec chip f" href="{{ site.baseurl }}/{{ page.version }}/elements/fingerprint.html">fingerprint</a><a class="link_odd_elementSpec chip f" href="{{ site.baseurl }}/{{ page.version }}/elements/foliadesc.html">foliaDesc</a><a class="link_odd_elementSpec chip f" href="{{ site.baseurl }}/{{ page.version }}/elements/foliation.html">foliation</a><a class="link_odd_elementSpec chip f" href="{{ site.baseurl }}/{{ page.version }}/elements/folium.html">folium</a><a class="link_odd_elementSpec chip f" href="{{ site.baseurl }}/{{ page.version }}/elements/forename.html">foreName</a><a class="link_odd_elementSpec chip f" href="{{ site.baseurl }}/{{ page.version }}/elements/front.html">front</a><a class="link_odd_elementSpec chip f" href="{{ site.baseurl }}/{{ page.version }}/elements/funder.html">funder</a></div>
      <div class="sortedInitials well g">
         <h3>g</h3><a class="link_odd_elementSpec chip g" href="{{ site.baseurl }}/{{ page.version }}/elements/gap.html">gap</a><a class="link_odd_elementSpec chip g" href="{{ site.baseurl }}/{{ page.version }}/elements/gendesc.html">genDesc</a><a class="link_odd_elementSpec chip g" href="{{ site.baseurl }}/{{ page.version }}/elements/genname.html">genName</a><a class="link_odd_elementSpec chip g" href="{{ site.baseurl }}/{{ page.version }}/elements/genstate.html">genState</a><a class="link_odd_elementSpec chip g" href="{{ site.baseurl }}/{{ page.version }}/elements/genre.html">genre</a><a class="link_odd_elementSpec chip g" href="{{ site.baseurl }}/{{ page.version }}/elements/geogfeat.html">geogFeat</a><a class="link_odd_elementSpec chip g" href="{{ site.baseurl }}/{{ page.version }}/elements/geogname.html">geogName</a><a class="link_odd_elementSpec chip g" href="{{ site.baseurl }}/{{ page.version }}/elements/gliss.html">gliss</a><a class="link_odd_elementSpec chip g" href="{{ site.baseurl }}/{{ page.version }}/elements/gracegrp.html">graceGrp</a><a class="link_odd_elementSpec chip g" href="{{ site.baseurl }}/{{ page.version }}/elements/graphic.html">graphic</a><a class="link_odd_elementSpec chip g" href="{{ site.baseurl }}/{{ page.version }}/elements/group.html">group</a><a class="link_odd_elementSpec chip g" href="{{ site.baseurl }}/{{ page.version }}/elements/grpsym.html">grpSym</a></div>
      <div class="sortedInitials well h">
         <h3>h</h3><a class="link_odd_elementSpec chip h" href="{{ site.baseurl }}/{{ page.version }}/elements/hairpin.html">hairpin</a><a class="link_odd_elementSpec chip h" href="{{ site.baseurl }}/{{ page.version }}/elements/halfmrpt.html">halfmRpt</a><a class="link_odd_elementSpec chip h" href="{{ site.baseurl }}/{{ page.version }}/elements/hand.html">hand</a><a class="link_odd_elementSpec chip h" href="{{ site.baseurl }}/{{ page.version }}/elements/handlist.html">handList</a><a class="link_odd_elementSpec chip h" href="{{ site.baseurl }}/{{ page.version }}/elements/handshift.html">handShift</a><a class="link_odd_elementSpec chip h" href="{{ site.baseurl }}/{{ page.version }}/elements/harm.html">harm</a><a class="link_odd_elementSpec chip h" href="{{ site.baseurl }}/{{ page.version }}/elements/harppedal.html">harpPedal</a><a class="link_odd_elementSpec chip h" href="{{ site.baseurl }}/{{ page.version }}/elements/head.html">head</a><a class="link_odd_elementSpec chip h" href="{{ site.baseurl }}/{{ page.version }}/elements/height.html">height</a><a class="link_odd_elementSpec chip h" href="{{ site.baseurl }}/{{ page.version }}/elements/heraldry.html">heraldry</a><a class="link_odd_elementSpec chip h" href="{{ site.baseurl }}/{{ page.version }}/elements/hex.html">hex</a><a class="link_odd_elementSpec chip h" href="{{ site.baseurl }}/{{ page.version }}/elements/hispantick.html">hispanTick</a><a class="link_odd_elementSpec chip h" href="{{ site.baseurl }}/{{ page.version }}/elements/history.html">history</a></div>
      <div class="sortedInitials well i">
         <h3>i</h3><a class="link_odd_elementSpec chip i" href="{{ site.baseurl }}/{{ page.version }}/elements/identifier.html">identifier</a><a class="link_odd_elementSpec chip i" href="{{ site.baseurl }}/{{ page.version }}/elements/imprimatur.html">imprimatur</a><a class="link_odd_elementSpec chip i" href="{{ site.baseurl }}/{{ page.version }}/elements/imprint.html">imprint</a><a class="link_odd_elementSpec chip i" href="{{ site.baseurl }}/{{ page.version }}/elements/incip.html">incip</a><a class="link_odd_elementSpec chip i" href="{{ site.baseurl }}/{{ page.version }}/elements/incipcode.html">incipCode</a><a class="link_odd_elementSpec chip i" href="{{ site.baseurl }}/{{ page.version }}/elements/inciptext.html">incipText</a><a class="link_odd_elementSpec chip i" href="{{ site.baseurl }}/{{ page.version }}/elements/inscription.html">inscription</a><a class="link_odd_elementSpec chip i" href="{{ site.baseurl }}/{{ page.version }}/elements/instrdef.html">instrDef</a><a class="link_odd_elementSpec chip i" href="{{ site.baseurl }}/{{ page.version }}/elements/instrgrp.html">instrGrp</a><a class="link_odd_elementSpec chip i" href="{{ site.baseurl }}/{{ page.version }}/elements/interpretation.html">interpretation</a><a class="link_odd_elementSpec chip i" href="{{ site.baseurl }}/{{ page.version }}/elements/item.html">item</a><a class="link_odd_elementSpec chip i" href="{{ site.baseurl }}/{{ page.version }}/elements/itemlist.html">itemList</a></div>
      <div class="sortedInitials well k">
         <h3>k</h3><a class="link_odd_elementSpec chip k" href="{{ site.baseurl }}/{{ page.version }}/elements/key.html">key</a><a class="link_odd_elementSpec chip k" href="{{ site.baseurl }}/{{ page.version }}/elements/keyaccid.html">keyAccid</a><a class="link_odd_elementSpec chip k" href="{{ site.baseurl }}/{{ page.version }}/elements/keysig.html">keySig</a></div>
      <div class="sortedInitials well l">
         <h3>l</h3><a class="link_odd_elementSpec chip l" href="{{ site.baseurl }}/{{ page.version }}/elements/l.html">l</a><a class="link_odd_elementSpec chip l" href="{{ site.baseurl }}/{{ page.version }}/elements/label.html">label</a><a class="link_odd_elementSpec chip l" href="{{ site.baseurl }}/{{ page.version }}/elements/labelabbr.html">labelAbbr</a><a class="link_odd_elementSpec chip l" href="{{ site.baseurl }}/{{ page.version }}/elements/langusage.html">langUsage</a><a class="link_odd_elementSpec chip l" href="{{ site.baseurl }}/{{ page.version }}/elements/language.html">language</a><a class="link_odd_elementSpec chip l" href="{{ site.baseurl }}/{{ page.version }}/elements/layer.html">layer</a><a class="link_odd_elementSpec chip l" href="{{ site.baseurl }}/{{ page.version }}/elements/layerdef.html">layerDef</a><a class="link_odd_elementSpec chip l" href="{{ site.baseurl }}/{{ page.version }}/elements/layout.html">layout</a><a class="link_odd_elementSpec chip l" href="{{ site.baseurl }}/{{ page.version }}/elements/layoutdesc.html">layoutDesc</a><a class="link_odd_elementSpec chip l" href="{{ site.baseurl }}/{{ page.version }}/elements/lb.html">lb</a><a class="link_odd_elementSpec chip l" href="{{ site.baseurl }}/{{ page.version }}/elements/lem.html">lem</a><a class="link_odd_elementSpec chip l" href="{{ site.baseurl }}/{{ page.version }}/elements/lg.html">lg</a><a class="link_odd_elementSpec chip l" href="{{ site.baseurl }}/{{ page.version }}/elements/li.html">li</a><a class="link_odd_elementSpec chip l" href="{{ site.baseurl }}/{{ page.version }}/elements/librettist.html">librettist</a><a class="link_odd_elementSpec chip l" href="{{ site.baseurl }}/{{ page.version }}/elements/ligature.html">ligature</a><a class="link_odd_elementSpec chip l" href="{{ site.baseurl }}/{{ page.version }}/elements/line.html">line</a><a class="link_odd_elementSpec chip l" href="{{ site.baseurl }}/{{ page.version }}/elements/liquescent.html">liquescent</a><a class="link_odd_elementSpec chip l" href="{{ site.baseurl }}/{{ page.version }}/elements/list.html">list</a><a class="link_odd_elementSpec chip l" href="{{ site.baseurl }}/{{ page.version }}/elements/locus.html">locus</a><a class="link_odd_elementSpec chip l" href="{{ site.baseurl }}/{{ page.version }}/elements/locusgrp.html">locusGrp</a><a class="link_odd_elementSpec chip l" href="{{ site.baseurl }}/{{ page.version }}/elements/lv.html">lv</a><a class="link_odd_elementSpec chip l" href="{{ site.baseurl }}/{{ page.version }}/elements/lyricist.html">lyricist</a></div>
      <div class="sortedInitials well m">
         <h3>m</h3><a class="link_odd_elementSpec chip m" href="{{ site.baseurl }}/{{ page.version }}/elements/mnum.html">mNum</a><a class="link_odd_elementSpec chip m" href="{{ site.baseurl }}/{{ page.version }}/elements/mrest.html">mRest</a><a class="link_odd_elementSpec chip m" href="{{ site.baseurl }}/{{ page.version }}/elements/mrpt.html">mRpt</a><a class="link_odd_elementSpec chip m" href="{{ site.baseurl }}/{{ page.version }}/elements/mrpt2.html">mRpt2</a><a class="link_odd_elementSpec chip m" href="{{ site.baseurl }}/{{ page.version }}/elements/mspace.html">mSpace</a><a class="link_odd_elementSpec chip m" href="{{ site.baseurl }}/{{ page.version }}/elements/manifestation.html">manifestation</a><a class="link_odd_elementSpec chip m" href="{{ site.baseurl }}/{{ page.version }}/elements/manifestationlist.html">manifestationList</a><a class="link_odd_elementSpec chip m" href="{{ site.baseurl }}/{{ page.version }}/elements/mapping.html">mapping</a><a class="link_odd_elementSpec chip m" href="{{ site.baseurl }}/{{ page.version }}/elements/marker.html">marker</a><a class="link_odd_elementSpec chip m" href="{{ site.baseurl }}/{{ page.version }}/elements/mdiv.html">mdiv</a><a class="link_odd_elementSpec chip m" href="{{ site.baseurl }}/{{ page.version }}/elements/measure.html">measure</a><a class="link_odd_elementSpec chip m" href="{{ site.baseurl }}/{{ page.version }}/elements/mei.html">mei</a><a class="link_odd_elementSpec chip m" href="{{ site.baseurl }}/{{ page.version }}/elements/meicorpus.html">meiCorpus</a><a class="link_odd_elementSpec chip m" href="{{ site.baseurl }}/{{ page.version }}/elements/meihead.html">meiHead</a><a class="link_odd_elementSpec chip m" href="{{ site.baseurl }}/{{ page.version }}/elements/mensur.html">mensur</a><a class="link_odd_elementSpec chip m" href="{{ site.baseurl }}/{{ page.version }}/elements/mensuration.html">mensuration</a><a class="link_odd_elementSpec chip m" href="{{ site.baseurl }}/{{ page.version }}/elements/metamark.html">metaMark</a><a class="link_odd_elementSpec chip m" href="{{ site.baseurl }}/{{ page.version }}/elements/metatext.html">metaText</a><a class="link_odd_elementSpec chip m" href="{{ site.baseurl }}/{{ page.version }}/elements/meter.html">meter</a><a class="link_odd_elementSpec chip m" href="{{ site.baseurl }}/{{ page.version }}/elements/metersig.html">meterSig</a><a class="link_odd_elementSpec chip m" href="{{ site.baseurl }}/{{ page.version }}/elements/metersiggrp.html">meterSigGrp</a><a class="link_odd_elementSpec chip m" href="{{ site.baseurl }}/{{ page.version }}/elements/midi.html">midi</a><a class="link_odd_elementSpec chip m" href="{{ site.baseurl }}/{{ page.version }}/elements/monogr.html">monogr</a><a class="link_odd_elementSpec chip m" href="{{ site.baseurl }}/{{ page.version }}/elements/mordent.html">mordent</a><a class="link_odd_elementSpec chip m" href="{{ site.baseurl }}/{{ page.version }}/elements/multirest.html">multiRest</a><a class="link_odd_elementSpec chip m" href="{{ site.baseurl }}/{{ page.version }}/elements/multirpt.html">multiRpt</a><a class="link_odd_elementSpec chip m" href="{{ site.baseurl }}/{{ page.version }}/elements/music.html">music</a></div>
      <div class="sortedInitials well n">
         <h3>n</h3><a class="link_odd_elementSpec chip n" href="{{ site.baseurl }}/{{ page.version }}/elements/name.html">name</a><a class="link_odd_elementSpec chip n" href="{{ site.baseurl }}/{{ page.version }}/elements/namelink.html">nameLink</a><a class="link_odd_elementSpec chip n" href="{{ site.baseurl }}/{{ page.version }}/elements/namespace.html">namespace</a><a class="link_odd_elementSpec chip n" href="{{ site.baseurl }}/{{ page.version }}/elements/nc.html">nc</a><a class="link_odd_elementSpec chip n" href="{{ site.baseurl }}/{{ page.version }}/elements/ncgrp.html">ncGrp</a><a class="link_odd_elementSpec chip n" href="{{ site.baseurl }}/{{ page.version }}/elements/neume.html">neume</a><a class="link_odd_elementSpec chip n" href="{{ site.baseurl }}/{{ page.version }}/elements/normalization.html">normalization</a><a class="link_odd_elementSpec chip n" href="{{ site.baseurl }}/{{ page.version }}/elements/note.html">note</a><a class="link_odd_elementSpec chip n" href="{{ site.baseurl }}/{{ page.version }}/elements/noteoff.html">noteOff</a><a class="link_odd_elementSpec chip n" href="{{ site.baseurl }}/{{ page.version }}/elements/noteon.html">noteOn</a><a class="link_odd_elementSpec chip n" href="{{ site.baseurl }}/{{ page.version }}/elements/notesstmt.html">notesStmt</a><a class="link_odd_elementSpec chip n" href="{{ site.baseurl }}/{{ page.version }}/elements/num.html">num</a></div>
      <div class="sortedInitials well o">
         <h3>o</h3><a class="link_odd_elementSpec chip o" href="{{ site.baseurl }}/{{ page.version }}/elements/olayer.html">oLayer</a><a class="link_odd_elementSpec chip o" href="{{ site.baseurl }}/{{ page.version }}/elements/ostaff.html">oStaff</a><a class="link_odd_elementSpec chip o" href="{{ site.baseurl }}/{{ page.version }}/elements/octave.html">octave</a><a class="link_odd_elementSpec chip o" href="{{ site.baseurl }}/{{ page.version }}/elements/orig.html">orig</a><a class="link_odd_elementSpec chip o" href="{{ site.baseurl }}/{{ page.version }}/elements/oriscus.html">oriscus</a><a class="link_odd_elementSpec chip o" href="{{ site.baseurl }}/{{ page.version }}/elements/ornam.html">ornam</a><a class="link_odd_elementSpec chip o" href="{{ site.baseurl }}/{{ page.version }}/elements/ossia.html">ossia</a><a class="link_odd_elementSpec chip o" href="{{ site.baseurl }}/{{ page.version }}/elements/otherchar.html">otherChar</a></div>
      <div class="sortedInitials well p">
         <h3>p</h3><a class="link_odd_elementSpec chip p" href="{{ site.baseurl }}/{{ page.version }}/elements/p.html">p</a><a class="link_odd_elementSpec chip p" href="{{ site.baseurl }}/{{ page.version }}/elements/pad.html">pad</a><a class="link_odd_elementSpec chip p" href="{{ site.baseurl }}/{{ page.version }}/elements/part.html">part</a><a class="link_odd_elementSpec chip p" href="{{ site.baseurl }}/{{ page.version }}/elements/parts.html">parts</a><a class="link_odd_elementSpec chip p" href="{{ site.baseurl }}/{{ page.version }}/elements/patch.html">patch</a><a class="link_odd_elementSpec chip p" href="{{ site.baseurl }}/{{ page.version }}/elements/pb.html">pb</a><a class="link_odd_elementSpec chip p" href="{{ site.baseurl }}/{{ page.version }}/elements/pedal.html">pedal</a><a class="link_odd_elementSpec chip p" href="{{ site.baseurl }}/{{ page.version }}/elements/perfduration.html">perfDuration</a><a class="link_odd_elementSpec chip p" href="{{ site.baseurl }}/{{ page.version }}/elements/perfmedium.html">perfMedium</a><a class="link_odd_elementSpec chip p" href="{{ site.baseurl }}/{{ page.version }}/elements/perfres.html">perfRes</a><a class="link_odd_elementSpec chip p" href="{{ site.baseurl }}/{{ page.version }}/elements/perfreslist.html">perfResList</a><a class="link_odd_elementSpec chip p" href="{{ site.baseurl }}/{{ page.version }}/elements/performance.html">performance</a><a class="link_odd_elementSpec chip p" href="{{ site.baseurl }}/{{ page.version }}/elements/periodname.html">periodName</a><a class="link_odd_elementSpec chip p" href="{{ site.baseurl }}/{{ page.version }}/elements/persname.html">persName</a><a class="link_odd_elementSpec chip p" href="{{ site.baseurl }}/{{ page.version }}/elements/pgdesc.html">pgDesc</a><a class="link_odd_elementSpec chip p" href="{{ site.baseurl }}/{{ page.version }}/elements/pgfoot.html">pgFoot</a><a class="link_odd_elementSpec chip p" href="{{ site.baseurl }}/{{ page.version }}/elements/pgfoot2.html">pgFoot2</a><a class="link_odd_elementSpec chip p" href="{{ site.baseurl }}/{{ page.version }}/elements/pghead.html">pgHead</a><a class="link_odd_elementSpec chip p" href="{{ site.baseurl }}/{{ page.version }}/elements/pghead2.html">pgHead2</a><a class="link_odd_elementSpec chip p" href="{{ site.baseurl }}/{{ page.version }}/elements/phrase.html">phrase</a><a class="link_odd_elementSpec chip p" href="{{ site.baseurl }}/{{ page.version }}/elements/physdesc.html">physDesc</a><a class="link_odd_elementSpec chip p" href="{{ site.baseurl }}/{{ page.version }}/elements/physloc.html">physLoc</a><a class="link_odd_elementSpec chip p" href="{{ site.baseurl }}/{{ page.version }}/elements/physmedium.html">physMedium</a><a class="link_odd_elementSpec chip p" href="{{ site.baseurl }}/{{ page.version }}/elements/platenum.html">plateNum</a><a class="link_odd_elementSpec chip p" href="{{ site.baseurl }}/{{ page.version }}/elements/playingspeed.html">playingSpeed</a><a class="link_odd_elementSpec chip p" href="{{ site.baseurl }}/{{ page.version }}/elements/port.html">port</a><a class="link_odd_elementSpec chip p" href="{{ site.baseurl }}/{{ page.version }}/elements/postbox.html">postBox</a><a class="link_odd_elementSpec chip p" href="{{ site.baseurl }}/{{ page.version }}/elements/postcode.html">postCode</a><a class="link_odd_elementSpec chip p" href="{{ site.baseurl }}/{{ page.version }}/elements/price.html">price</a><a class="link_odd_elementSpec chip p" href="{{ site.baseurl }}/{{ page.version }}/elements/prog.html">prog</a><a class="link_odd_elementSpec chip p" href="{{ site.baseurl }}/{{ page.version }}/elements/projectdesc.html">projectDesc</a><a class="link_odd_elementSpec chip p" href="{{ site.baseurl }}/{{ page.version }}/elements/propname.html">propName</a><a class="link_odd_elementSpec chip p" href="{{ site.baseurl }}/{{ page.version }}/elements/propvalue.html">propValue</a><a class="link_odd_elementSpec chip p" href="{{ site.baseurl }}/{{ page.version }}/elements/proport.html">proport</a><a class="link_odd_elementSpec chip p" href="{{ site.baseurl }}/{{ page.version }}/elements/provenance.html">provenance</a><a class="link_odd_elementSpec chip p" href="{{ site.baseurl }}/{{ page.version }}/elements/ptr.html">ptr</a><a class="link_odd_elementSpec chip p" href="{{ site.baseurl }}/{{ page.version }}/elements/pubplace.html">pubPlace</a><a class="link_odd_elementSpec chip p" href="{{ site.baseurl }}/{{ page.version }}/elements/pubstmt.html">pubStmt</a><a class="link_odd_elementSpec chip p" href="{{ site.baseurl }}/{{ page.version }}/elements/publisher.html">publisher</a></div>
      <div class="sortedInitials well q">
         <h3>q</h3><a class="link_odd_elementSpec chip q" href="{{ site.baseurl }}/{{ page.version }}/elements/q.html">q</a><a class="link_odd_elementSpec chip q" href="{{ site.baseurl }}/{{ page.version }}/elements/quilisma.html">quilisma</a><a class="link_odd_elementSpec chip q" href="{{ site.baseurl }}/{{ page.version }}/elements/quote.html">quote</a></div>
      <div class="sortedInitials well r">
         <h3>r</h3><a class="link_odd_elementSpec chip r" href="{{ site.baseurl }}/{{ page.version }}/elements/rdg.html">rdg</a><a class="link_odd_elementSpec chip r" href="{{ site.baseurl }}/{{ page.version }}/elements/recipient.html">recipient</a><a class="link_odd_elementSpec chip r" href="{{ site.baseurl }}/{{ page.version }}/elements/recording.html">recording</a><a class="link_odd_elementSpec chip r" href="{{ site.baseurl }}/{{ page.version }}/elements/ref.html">ref</a><a class="link_odd_elementSpec chip r" href="{{ site.baseurl }}/{{ page.version }}/elements/refrain.html">refrain</a><a class="link_odd_elementSpec chip r" href="{{ site.baseurl }}/{{ page.version }}/elements/reg.html">reg</a><a class="link_odd_elementSpec chip r" href="{{ site.baseurl }}/{{ page.version }}/elements/region.html">region</a><a class="link_odd_elementSpec chip r" href="{{ site.baseurl }}/{{ page.version }}/elements/reh.html">reh</a><a class="link_odd_elementSpec chip r" href="{{ site.baseurl }}/{{ page.version }}/elements/relateditem.html">relatedItem</a><a class="link_odd_elementSpec chip r" href="{{ site.baseurl }}/{{ page.version }}/elements/relation.html">relation</a><a class="link_odd_elementSpec chip r" href="{{ site.baseurl }}/{{ page.version }}/elements/relationlist.html">relationList</a><a class="link_odd_elementSpec chip r" href="{{ site.baseurl }}/{{ page.version }}/elements/rend.html">rend</a><a class="link_odd_elementSpec chip r" href="{{ site.baseurl }}/{{ page.version }}/elements/repository.html">repository</a><a class="link_odd_elementSpec chip r" href="{{ site.baseurl }}/{{ page.version }}/elements/resp.html">resp</a><a class="link_odd_elementSpec chip r" href="{{ site.baseurl }}/{{ page.version }}/elements/respstmt.html">respStmt</a><a class="link_odd_elementSpec chip r" href="{{ site.baseurl }}/{{ page.version }}/elements/rest.html">rest</a><a class="link_odd_elementSpec chip r" href="{{ site.baseurl }}/{{ page.version }}/elements/restore.html">restore</a><a class="link_odd_elementSpec chip r" href="{{ site.baseurl }}/{{ page.version }}/elements/revisiondesc.html">revisionDesc</a><a class="link_odd_elementSpec chip r" href="{{ site.baseurl }}/{{ page.version }}/elements/role.html">role</a><a class="link_odd_elementSpec chip r" href="{{ site.baseurl }}/{{ page.version }}/elements/roledesc.html">roleDesc</a><a class="link_odd_elementSpec chip r" href="{{ site.baseurl }}/{{ page.version }}/elements/rolename.html">roleName</a><a class="link_odd_elementSpec chip r" href="{{ site.baseurl }}/{{ page.version }}/elements/rubric.html">rubric</a></div>
      <div class="sortedInitials well s">
         <h3>s</h3><a class="link_odd_elementSpec chip s" href="{{ site.baseurl }}/{{ page.version }}/elements/samplingdecl.html">samplingDecl</a><a class="link_odd_elementSpec chip s" href="{{ site.baseurl }}/{{ page.version }}/elements/sb.html">sb</a><a class="link_odd_elementSpec chip s" href="{{ site.baseurl }}/{{ page.version }}/elements/score.html">score</a><a class="link_odd_elementSpec chip s" href="{{ site.baseurl }}/{{ page.version }}/elements/scoredef.html">scoreDef</a><a class="link_odd_elementSpec chip s" href="{{ site.baseurl }}/{{ page.version }}/elements/scoreformat.html">scoreFormat</a><a class="link_odd_elementSpec chip s" href="{{ site.baseurl }}/{{ page.version }}/elements/scriptdesc.html">scriptDesc</a><a class="link_odd_elementSpec chip s" href="{{ site.baseurl }}/{{ page.version }}/elements/scriptnote.html">scriptNote</a><a class="link_odd_elementSpec chip s" href="{{ site.baseurl }}/{{ page.version }}/elements/seal.html">seal</a><a class="link_odd_elementSpec chip s" href="{{ site.baseurl }}/{{ page.version }}/elements/sealdesc.html">sealDesc</a><a class="link_odd_elementSpec chip s" href="{{ site.baseurl }}/{{ page.version }}/elements/secfolio.html">secFolio</a><a class="link_odd_elementSpec chip s" href="{{ site.baseurl }}/{{ page.version }}/elements/section.html">section</a><a class="link_odd_elementSpec chip s" href="{{ site.baseurl }}/{{ page.version }}/elements/seg.html">seg</a><a class="link_odd_elementSpec chip s" href="{{ site.baseurl }}/{{ page.version }}/elements/segmentation.html">segmentation</a><a class="link_odd_elementSpec chip s" href="{{ site.baseurl }}/{{ page.version }}/elements/seqnum.html">seqNum</a><a class="link_odd_elementSpec chip s" href="{{ site.baseurl }}/{{ page.version }}/elements/series.html">series</a><a class="link_odd_elementSpec chip s" href="{{ site.baseurl }}/{{ page.version }}/elements/seriesstmt.html">seriesStmt</a><a class="link_odd_elementSpec chip s" href="{{ site.baseurl }}/{{ page.version }}/elements/settlement.html">settlement</a><a class="link_odd_elementSpec chip s" href="{{ site.baseurl }}/{{ page.version }}/elements/sic.html">sic</a><a class="link_odd_elementSpec chip s" href="{{ site.baseurl }}/{{ page.version }}/elements/signatures.html">signatures</a><a class="link_odd_elementSpec chip s" href="{{ site.baseurl }}/{{ page.version }}/elements/signiflet.html">signifLet</a><a class="link_odd_elementSpec chip s" href="{{ site.baseurl }}/{{ page.version }}/elements/slur.html">slur</a><a class="link_odd_elementSpec chip s" href="{{ site.baseurl }}/{{ page.version }}/elements/soundchan.html">soundChan</a><a class="link_odd_elementSpec chip s" href="{{ site.baseurl }}/{{ page.version }}/elements/source.html">source</a><a class="link_odd_elementSpec chip s" href="{{ site.baseurl }}/{{ page.version }}/elements/sourcedesc.html">sourceDesc</a><a class="link_odd_elementSpec chip s" href="{{ site.baseurl }}/{{ page.version }}/elements/sp.html">sp</a><a class="link_odd_elementSpec chip s" href="{{ site.baseurl }}/{{ page.version }}/elements/space.html">space</a><a class="link_odd_elementSpec chip s" href="{{ site.baseurl }}/{{ page.version }}/elements/speaker.html">speaker</a><a class="link_odd_elementSpec chip s" href="{{ site.baseurl }}/{{ page.version }}/elements/specrepro.html">specRepro</a><a class="link_odd_elementSpec chip s" href="{{ site.baseurl }}/{{ page.version }}/elements/sponsor.html">sponsor</a><a class="link_odd_elementSpec chip s" href="{{ site.baseurl }}/{{ page.version }}/elements/stack.html">stack</a><a class="link_odd_elementSpec chip s" href="{{ site.baseurl }}/{{ page.version }}/elements/staff.html">staff</a><a class="link_odd_elementSpec chip s" href="{{ site.baseurl }}/{{ page.version }}/elements/staffdef.html">staffDef</a><a class="link_odd_elementSpec chip s" href="{{ site.baseurl }}/{{ page.version }}/elements/staffgrp.html">staffGrp</a><a class="link_odd_elementSpec chip s" href="{{ site.baseurl }}/{{ page.version }}/elements/stagedir.html">stageDir</a><a class="link_odd_elementSpec chip s" href="{{ site.baseurl }}/{{ page.version }}/elements/stamp.html">stamp</a><a class="link_odd_elementSpec chip s" href="{{ site.baseurl }}/{{ page.version }}/elements/stdvals.html">stdVals</a><a class="link_odd_elementSpec chip s" href="{{ site.baseurl }}/{{ page.version }}/elements/street.html">street</a><a class="link_odd_elementSpec chip s" href="{{ site.baseurl }}/{{ page.version }}/elements/strophicus.html">strophicus</a><a class="link_odd_elementSpec chip s" href="{{ site.baseurl }}/{{ page.version }}/elements/stylename.html">styleName</a><a class="link_odd_elementSpec chip s" href="{{ site.baseurl }}/{{ page.version }}/elements/subst.html">subst</a><a class="link_odd_elementSpec chip s" href="{{ site.baseurl }}/{{ page.version }}/elements/supplied.html">supplied</a><a class="link_odd_elementSpec chip s" href="{{ site.baseurl }}/{{ page.version }}/elements/support.html">support</a><a class="link_odd_elementSpec chip s" href="{{ site.baseurl }}/{{ page.version }}/elements/supportdesc.html">supportDesc</a><a class="link_odd_elementSpec chip s" href="{{ site.baseurl }}/{{ page.version }}/elements/surface.html">surface</a><a class="link_odd_elementSpec chip s" href="{{ site.baseurl }}/{{ page.version }}/elements/syl.html">syl</a><a class="link_odd_elementSpec chip s" href="{{ site.baseurl }}/{{ page.version }}/elements/syllable.html">syllable</a><a class="link_odd_elementSpec chip s" href="{{ site.baseurl }}/{{ page.version }}/elements/symname.html">symName</a><a class="link_odd_elementSpec chip s" href="{{ site.baseurl }}/{{ page.version }}/elements/symprop.html">symProp</a><a class="link_odd_elementSpec chip s" href="{{ site.baseurl }}/{{ page.version }}/elements/symbol.html">symbol</a><a class="link_odd_elementSpec chip s" href="{{ site.baseurl }}/{{ page.version }}/elements/symboldef.html">symbolDef</a><a class="link_odd_elementSpec chip s" href="{{ site.baseurl }}/{{ page.version }}/elements/symboltable.html">symbolTable</a><a class="link_odd_elementSpec chip s" href="{{ site.baseurl }}/{{ page.version }}/elements/sysreq.html">sysReq</a></div>
      <div class="sortedInitials well t">
         <h3>t</h3><a class="link_odd_elementSpec chip t" href="{{ site.baseurl }}/{{ page.version }}/elements/table.html">table</a><a class="link_odd_elementSpec chip t" href="{{ site.baseurl }}/{{ page.version }}/elements/tagusage.html">tagUsage</a><a class="link_odd_elementSpec chip t" href="{{ site.baseurl }}/{{ page.version }}/elements/tagsdecl.html">tagsDecl</a><a class="link_odd_elementSpec chip t" href="{{ site.baseurl }}/{{ page.version }}/elements/taxonomy.html">taxonomy</a><a class="link_odd_elementSpec chip t" href="{{ site.baseurl }}/{{ page.version }}/elements/td.html">td</a><a class="link_odd_elementSpec chip t" href="{{ site.baseurl }}/{{ page.version }}/elements/tempo.html">tempo</a><a class="link_odd_elementSpec chip t" href="{{ site.baseurl }}/{{ page.version }}/elements/term.html">term</a><a class="link_odd_elementSpec chip t" href="{{ site.baseurl }}/{{ page.version }}/elements/termlist.html">termList</a><a class="link_odd_elementSpec chip t" href="{{ site.baseurl }}/{{ page.version }}/elements/textlang.html">textLang</a><a class="link_odd_elementSpec chip t" href="{{ site.baseurl }}/{{ page.version }}/elements/th.html">th</a><a class="link_odd_elementSpec chip t" href="{{ site.baseurl }}/{{ page.version }}/elements/tie.html">tie</a><a class="link_odd_elementSpec chip t" href="{{ site.baseurl }}/{{ page.version }}/elements/title.html">title</a><a class="link_odd_elementSpec chip t" href="{{ site.baseurl }}/{{ page.version }}/elements/titlepage.html">titlePage</a><a class="link_odd_elementSpec chip t" href="{{ site.baseurl }}/{{ page.version }}/elements/titlepart.html">titlePart</a><a class="link_odd_elementSpec chip t" href="{{ site.baseurl }}/{{ page.version }}/elements/titlestmt.html">titleStmt</a><a class="link_odd_elementSpec chip t" href="{{ site.baseurl }}/{{ page.version }}/elements/tr.html">tr</a><a class="link_odd_elementSpec chip t" href="{{ site.baseurl }}/{{ page.version }}/elements/trackconfig.html">trackConfig</a><a class="link_odd_elementSpec chip t" href="{{ site.baseurl }}/{{ page.version }}/elements/treathist.html">treatHist</a><a class="link_odd_elementSpec chip t" href="{{ site.baseurl }}/{{ page.version }}/elements/treatsched.html">treatSched</a><a class="link_odd_elementSpec chip t" href="{{ site.baseurl }}/{{ page.version }}/elements/trill.html">trill</a><a class="link_odd_elementSpec chip t" href="{{ site.baseurl }}/{{ page.version }}/elements/trkname.html">trkName</a><a class="link_odd_elementSpec chip t" href="{{ site.baseurl }}/{{ page.version }}/elements/tuplet.html">tuplet</a><a class="link_odd_elementSpec chip t" href="{{ site.baseurl }}/{{ page.version }}/elements/tupletspan.html">tupletSpan</a><a class="link_odd_elementSpec chip t" href="{{ site.baseurl }}/{{ page.version }}/elements/turn.html">turn</a><a class="link_odd_elementSpec chip t" href="{{ site.baseurl }}/{{ page.version }}/elements/typedesc.html">typeDesc</a><a class="link_odd_elementSpec chip t" href="{{ site.baseurl }}/{{ page.version }}/elements/typenote.html">typeNote</a></div>
      <div class="sortedInitials well u">
         <h3>u</h3><a class="link_odd_elementSpec chip u" href="{{ site.baseurl }}/{{ page.version }}/elements/unclear.html">unclear</a><a class="link_odd_elementSpec chip u" href="{{ site.baseurl }}/{{ page.version }}/elements/unpub.html">unpub</a><a class="link_odd_elementSpec chip u" href="{{ site.baseurl }}/{{ page.version }}/elements/userestrict.html">useRestrict</a></div>
      <div class="sortedInitials well v">
         <h3>v</h3><a class="link_odd_elementSpec chip v" href="{{ site.baseurl }}/{{ page.version }}/elements/vel.html">vel</a><a class="link_odd_elementSpec chip v" href="{{ site.baseurl }}/{{ page.version }}/elements/verse.html">verse</a><a class="link_odd_elementSpec chip v" href="{{ site.baseurl }}/{{ page.version }}/elements/volta.html">volta</a></div>
      <div class="sortedInitials well w">
         <h3>w</h3><a class="link_odd_elementSpec chip w" href="{{ site.baseurl }}/{{ page.version }}/elements/watermark.html">watermark</a><a class="link_odd_elementSpec chip w" href="{{ site.baseurl }}/{{ page.version }}/elements/when.html">when</a><a class="link_odd_elementSpec chip w" href="{{ site.baseurl }}/{{ page.version }}/elements/width.html">width</a><a class="link_odd_elementSpec chip w" href="{{ site.baseurl }}/{{ page.version }}/elements/work.html">work</a><a class="link_odd_elementSpec chip w" href="{{ site.baseurl }}/{{ page.version }}/elements/worklist.html">workList</a></div>
      <div class="sortedInitials well z">
         <h3>z</h3><a class="link_odd_elementSpec chip z" href="{{ site.baseurl }}/{{ page.version }}/elements/zone.html">zone</a></div>
   </div>
</div>